--- a/ok/bc/bc03-0.3.3.0.0.md
+++ b/ok/bc/bc03-0.3.3.0.0.md
@@ -10,7 +10,7 @@
 
 《备要》云有酒制、姜制者，古时取地黄酒炒，旨在防苦寒伤阳碍胃；用姜制以防滞腻泥膈，现已少用。
 
-【临证应用】  干地黄治温热病，热入营血，发热口干，舌绛等证，常与犀角、玄参等配用，以增强清营养阴功效，如清营汤。对温热病后期，余热未清，阴津已伤，阴虛内热者尤为适宜，常与青蒿、知母、鳖甲等配伍，如青蒿整甲汤。治血热妄行的吐血、衄血等出血证，配侧柏叶、生艾叶、生荷叶同用，如四生丸。若血热毒盛，发斑发疹而色紫暗者，可与犀角、丹皮、赤芍等配伍，以凉血消斑，如犀角地黄汤。
+【临证应用】  干地黄治温热病，热入营血，发热口干，舌绛等证，常与犀角、玄参等配用，以增强清营养阴功效，如清营汤。对温热病后期，余热未清，阴津已伤，阴虚内热者尤为适宜，常与青蒿、知母、鳖甲等配伍，如青蒿整甲汤。治血热妄行的吐血、衄血等出血证，配侧柏叶、生艾叶、生荷叶同用，如四生丸。若血热毒盛，发斑发疹而色紫暗者，可与犀角、丹皮、赤芍等配伍，以凉血消斑，如犀角地黄汤。
 
 本品清热力较弱而长于养阴，配麦冬、玉竹可养胃阴以生津，如益胃汤；配山茱萸、山药、茯苓等可滋肝肾之阴，如六味地黄丸。配当归、黄芩、黄芪等，又常与葛根、花粉、五味子配伍用，如玉泉散。有时还与麦冬、元参配伍，如增液汤，以润肠通便，治肠燥便秘。
 
