--- a/ok/bc/bc03-0.4.1.0.0.md
+++ b/ok/bc/bc03-0.4.1.0.0.md
@@ -10,7 +10,7 @@
 
  本品轻扬入肺经，善散肺经之邪热，故又为宣散风热之佳品，用于外感风热或温热病初起，发热而微恶风寒者。本品炒炭，则入血分，以治热毒血痢，既可清热解毒，又能止血。还可将金银花加水蒸馏，制成金银花露，为清凉解暑之品，供夏季饮用，可清热解暑，并清利头目，还能防治热疖痱子等证。
 
-《备要》所谓补虛、养血，治五种尸疰等功，《本草求真》阐释甚为明了。指出：殊不知书言能补虛者，因其芳香味甘，性虽入内逐热，而气不甚迅利伤损之意也。书言能养血者，因其毒结血凝，服此毒气顿解，而血自尔克养之谓也。……至云能治五种尸疰 ，亦不虚。（飞尸、遁尸、风尸、沉尸、尸疰，五疰病因不一，但此专主风湿内结为热而言。）
+《备要》所谓补虚、养血，治五种尸疰等功，《本草求真》阐释甚为明了。指出：殊不知书言能补虚者，因其芳香味甘，性虽入内逐热，而气不甚迅利伤损之意也。书言能养血者，因其毒结血凝，服此毒气顿解，而血自尔克养之谓也。……至云能治五种尸疰 ，亦不虚。（飞尸、遁尸、风尸、沉尸、尸疰，五疰病因不一，但此专主风湿内结为热而言。）
 
 江浙地区，地处东南，天气炎热，其处人们常以金银花代茶饮用，具有清热解暑之功。
 
