--- a/ok/bc/bc03-0.4.20.0.0.md
+++ b/ok/bc/bc03-0.4.20.0.0.md
@@ -8,4 +8,4 @@
 
 【临证应用】梨用于温热病津伤口渴，便秘等症，常以其汁与荸荠汁、鲜苇根汁、藕汁、麦冬汁配伍，如五汁饮，用于外感温燥，干咳无痰，或痰少而粘，气喘音哑等证，常用梨皮与桑叶、桔梗、沙参、栀子、杏仁等配伍，以加强清肺润燥之功。
 
-【用量用法】内服：生食，或捣汁，或熬膏，适量。外用：切薄片或捣敷患处。甘寒之品，脾虛便溏及寒嗽者忌服。
+【用量用法】内服：生食，或捣汁，或熬膏，适量。外用：切薄片或捣敷患处。甘寒之品，脾虚便溏及寒嗽者忌服。
