--- a/ok/bc/bc03-0.5.4.0.0.md
+++ b/ok/bc/bc03-0.5.4.0.0.md
@@ -7,8 +7,8 @@
 
 **胡黄连能退虚热，除疳热，清湿热**。为玄参科多年生草本植物胡黄连的根茎。干燥根茎呈圆柱形，表面灰黄色；质硬而脆，易折断，折断时有粉尘飞；断面皮部灰黑色、木部黄白色。以条粗，折断时有粉尘，断面灰黑。味苦者为佳。古人认为功似黄连，来自西域，故名胡黄连。主产印度，进口为主，西藏亦有少量生产。切片，生用。
 
-本品味苦、性寒。入心、肝、胃、大肠经。功能退虛热，消疳积，清湿热。故可用治阴虚发热，潮热骨蒸，小儿疳积。又有类似黄连的除湿热、解毒作用，也可治湿热泻痢及痔疮等证。
+本品味苦、性寒。入心、肝、胃、大肠经。功能退虚热，消疳积，清湿热。故可用治阴虚发热，潮热骨蒸，小儿疳积。又有类似黄连的除湿热、解毒作用，也可治湿热泻痢及痔疮等证。
 
-【临证应用】胡黄连借其清虛热之功，治阴虚骨蒸，潮热盗汗等证，常配银柴胡，地骨皮等药、如清骨散。治小儿疳积，消化不良，腹胀体瘦，与党参、白术、使君子等同用，如肥儿丸，治湿热泻痢，配伍与黄连相同，但不如黄连多用而效佳。
+【临证应用】胡黄连借其清虚热之功，治阴虚骨蒸，潮热盗汗等证，常配银柴胡，地骨皮等药、如清骨散。治小儿疳积，消化不良，腹胀体瘦，与党参、白术、使君子等同用，如肥儿丸，治湿热泻痢，配伍与黄连相同，但不如黄连多用而效佳。
 
 【用量用法】3—10克，煎服。
