--- a/ok/bc/bc09-0.1.2.0.0.md
+++ b/ok/bc/bc09-0.1.2.0.0.md
@@ -4,8 +4,8 @@
 
 **【讲解】 磁石为潜阳安神之品，并能纳气平喘**。为天然的等轴晶系磁铁矿的矿石。能吸铁的习称“灵磁石”或“活磁石”，曰久失去磁性不能吸铁者，习称“呆磁石”或“死磁石”。习以能吸铁者为佳。砸碎生用，或火煅醋淬研细用。
 
-本品味辛咸、性寒、质重。入心、肝、肾三经。为镇潜浮阳，摄纳肾气，重镇安神之品。主用于阴虚阳亢之证。肾开窍于耳，肾虚则耳鸣、耳聋；肝开窍于目，肝虚则目暗不明。肝肾阴虚，则肝阳上亢而为头晕、头痛；内扰神明则烦躁不宁，心悸失眠；肾虛不能纳气而致喘逆。本品既能重镇安神，又能潜降浮阳，并能摄纳肾气，故对上述诸证，皆有较好的疗效。前人说本品能“坠炎上之火以定志，引肺肾之气以入骨”。概括说明它有镇降、潜纳、安神的功效。惟金石之品，不宜多用久服。
+本品味辛咸、性寒、质重。入心、肝、肾三经。为镇潜浮阳，摄纳肾气，重镇安神之品。主用于阴虚阳亢之证。肾开窍于耳，肾虚则耳鸣、耳聋；肝开窍于目，肝虚则目暗不明。肝肾阴虚，则肝阳上亢而为头晕、头痛；内扰神明则烦躁不宁，心悸失眠；肾虚不能纳气而致喘逆。本品既能重镇安神，又能潜降浮阳，并能摄纳肾气，故对上述诸证，皆有较好的疗效。前人说本品能“坠炎上之火以定志，引肺肾之气以入骨”。概括说明它有镇降、潜纳、安神的功效。惟金石之品，不宜多用久服。
 
-【临证应用】磁石用于阴虛阳亢引起的头晕、头痛、耳鸣、耳聋，常与地黄、山萸肉、山药等配伍，如耳聋左慈丸。治烦躁不宁、心悸失眠、癫痫以及视力模糊等症，可与朱砂配伍，如磁朱丸，或磁朱丸再配合滋补肝肾、宁心安神药同用，近年临床报道，用磁朱丸治疗老年性白内障，可使部分病例增进视力。肾虛气喘，宜与五味子、胡桃肉、代赭石等补肾敛肺、降气药同用，以增强降气纳肾之功。
+【临证应用】磁石用于阴虚阳亢引起的头晕、头痛、耳鸣、耳聋，常与地黄、山萸肉、山药等配伍，如耳聋左慈丸。治烦躁不宁、心悸失眠、癫痫以及视力模糊等症，可与朱砂配伍，如磁朱丸，或磁朱丸再配合滋补肝肾、宁心安神药同用，近年临床报道，用磁朱丸治疗老年性白内障，可使部分病例增进视力。肾虚气喘，宜与五味子、胡桃肉、代赭石等补肾敛肺、降气药同用，以增强降气纳肾之功。
 
 【用量用法】15~30克，打碎先煎。入丸散，不可多服，因不易消化。
