--- a/ok/bc/bc09-0.1.5.0.0.md
+++ b/ok/bc/bc09-0.1.5.0.0.md
@@ -7,6 +7,6 @@
 本品味咸，性微寒，质重。入肝、肾二经。性寒质重，而有重镇安神之功，并能益阴补水，平肝潜阳，以治阴虚阳亢，心神不安之证；味咸而涩，又有软坚散结，收敛固涩之效，以治痰火郁结之瘰疬、痰核、肝脾肿大以及体虚滑脱等证。并可用于胃酸过多，胃溃疡的反复作痛，有制酸止痛作用。至于《备要》载治温疟赤痢，有利湿止渴作用，临床罕见使用。
 
 【临证应用】 牡蛎用于心神不安之胆怯惊恐、心悸怔忡、失眠多梦等证，常与龙骨、代赭石、龟板、白芍等同用，如镇肝熄风汤，若热病伤阴，肝风内动，四肢抽搐等亦可与龟板、鳖甲、阿胶、白芍等同用，以养阴息风止痉，如三甲复脉汤；用于痰火郁结的瘰疬、痰核，常与降火消痰散郁结的玄参、浙贝母配伍，如消瘰丸。若与柴胡、青皮、丹参、郁金、鳖甲、穿山甲等疏肝理气、活血软坚药同用，可治肝脾肿大，胁下疼痛。本品煅用，
-又长于收敛固涩，用于虚汗遗精，带下崩漏等证。治自汗盗汗可单用煎服；或与黄芪、浮小麦、麻黄根等配伍，如牡蛎散；治肾虛、精关不固之遗精、滑精，常与沙苑蒺藜、莲须、芡实等同用，如金锁固精丸；治崩漏带下、肾虛冲任不固者，可与阿胶、乌贼骨、川断、山药等同用。用于胃痛反酸可单用冲服，亦可加入和胃止痛药中应用。
+又长于收敛固涩，用于虚汗遗精，带下崩漏等证。治自汗盗汗可单用煎服；或与黄芪、浮小麦、麻黄根等配伍，如牡蛎散；治肾虚、精关不固之遗精、滑精，常与沙苑蒺藜、莲须、芡实等同用，如金锁固精丸；治崩漏带下、肾虚冲任不固者，可与阿胶、乌贼骨、川断、山药等同用。用于胃痛反酸可单用冲服，亦可加入和胃止痛药中应用。
 
 【用量用法】 15—30克，入汤剂宜先煎。潜阳、软坚宜生用； 收敛、制酸宜煅用。
