--- a/ok/bc/bc09.md
+++ b/ok/bc/bc09.md
@@ -24,4 +24,4 @@
 
 安神药主要适用于心神不安的病证，如心悸证忡，烦躁失眠，健忘头晕，以及癫痫、惊风等证。
 
-心神不宁之证，每多虚实夹杂。心火亢盛或邪热内扰，及肝阳上亢者，多偏于实；心血或肝阴不足者，多偏于虛，因此在治疗上，根据安神药的性能，又可分为重镇安神药和养心安神药两类。其临床应用须根据病因、病机选用适当的药物并加相应的配伍，如心火亢盛者，配清心药；心血不足者，配滋阴养血药等等。
+心神不宁之证，每多虚实夹杂。心火亢盛或邪热内扰，及肝阳上亢者，多偏于实；心血或肝阴不足者，多偏于虚，因此在治疗上，根据安神药的性能，又可分为重镇安神药和养心安神药两类。其临床应用须根据病因、病机选用适当的药物并加相应的配伍，如心火亢盛者，配清心药；心血不足者，配滋阴养血药等等。
