--- a/ok/bc/bc10-0.0.2.0.0.md
+++ b/ok/bc/bc10-0.0.2.0.0.md
@@ -6,6 +6,6 @@
 
 本品味咸性微寒，质重。主入肝经。善清肝火，且可养阴，而为镇肝潜阳、平肝息风之要药。肝开窍于目，肝经有热、风火上炎所致目赤肿痛、青盲翳障、头痛眩晕，以及肝肾阴虚、浮阳上扰等证，石决明均为常用之品。兼能清虚热，故可用治骨蒸劳热之证。
 
-【临证应用】石决明用于肝肾阴虛、肝阳上亢之头晕目眩，常与养阴平肝药生地、白芍、牡蛎等同用，若阳亢而有热象者，则宜与清热平肝药钩藤、菊花、夏枯草等同用。用于目赤肿痛、青盲翳障、视物模糊等证，如系肝火上炎而目赤肿痛，可配龙胆草、决明子、菊花等清肝明目药同用；若为风热目疾，翳膜遮睛，可与穀精草、桑叶、蝉蜕等疏散风热明目药同用；肝肾阴虛，视物模糊者，可与地黄、枸杞子、菟丝子等滋养肝肾药同用。若与茺蔚子、车前子、苍术、密蒙花等配伍，治青盲内障有良效。至于《备要》云通五淋、解酒酸之说，今少见应用。
+【临证应用】石决明用于肝肾阴虚、肝阳上亢之头晕目眩，常与养阴平肝药生地、白芍、牡蛎等同用，若阳亢而有热象者，则宜与清热平肝药钩藤、菊花、夏枯草等同用。用于目赤肿痛、青盲翳障、视物模糊等证，如系肝火上炎而目赤肿痛，可配龙胆草、决明子、菊花等清肝明目药同用；若为风热目疾，翳膜遮睛，可与穀精草、桑叶、蝉蜕等疏散风热明目药同用；肝肾阴虚，视物模糊者，可与地黄、枸杞子、菟丝子等滋养肝肾药同用。若与茺蔚子、车前子、苍术、密蒙花等配伍，治青盲内障有良效。至于《备要》云通五淋、解酒酸之说，今少见应用。
 
 【用量用法】10—30克，入煎剂宜先煎。清肝平肝生用内服，眼疾外用则宜煅、研末水飞用。
