--- a/ok/bc/bc11-0.0.14.0.0.md
+++ b/ok/bc/bc11-0.0.14.0.0.md
@@ -1,6 +1,6 @@
 ### 薤 白
 
-**〔原文〕辛苦温滑。调中助阳，散血生肌，泄下焦大肠气滞。治泄痢下重**，王好古曰：下重者，气滞也，四逆散加此以泄滞。按，后重亦有气虚、血虛、火热、风燥之不同。**胸痹刺痛**，张仲景用栝蒌薤白白酒汤。肺气端急。**安胎利产，涂汤火伤**。和蜜捣用。《肘后方》，中恶卒死者，用薤汁灌鼻中，韭汁亦可。**叶似韭而中空，根如蒜。取白用，忌牛肉。**其叶光滑，露亦难贮，故云薤露。
+**〔原文〕辛苦温滑。调中助阳，散血生肌，泄下焦大肠气滞。治泄痢下重**，王好古曰：下重者，气滞也，四逆散加此以泄滞。按，后重亦有气虚、血虚、火热、风燥之不同。**胸痹刺痛**，张仲景用栝蒌薤白白酒汤。肺气端急。**安胎利产，涂汤火伤**。和蜜捣用。《肘后方》，中恶卒死者，用薤汁灌鼻中，韭汁亦可。**叶似韭而中空，根如蒜。取白用，忌牛肉。**其叶光滑，露亦难贮，故云薤露。
 
 【讲解】 **薤白善能通阳散结、行气导滞，为治胸痹要药**。为百合科多年生草本植物小根蒜和薤的地下鱗茎。洗净晒干，生用。
 
