--- a/ok/bc/bc11-0.0.18.0.0.md
+++ b/ok/bc/bc11-0.0.18.0.0.md
@@ -6,6 +6,6 @@
 
 本品味甘性温，入胃、肾经。功专温中降气，而为止呃常用之品。适用于虚寒呃逆、嗳气呕吐等证。此外，兼能温肾助阳，以治肾虚腰痛。
 
-【临证应用】刀豆主要用于虛寒呃逆，可配丁香、柿蒂、生姜等温中降逆药同用，以加强降逆止呃之功。冶肾虚腰痛，用刀豆二粒，包于猪腰子内，烧熟食之。
+【临证应用】刀豆主要用于虚寒呃逆，可配丁香、柿蒂、生姜等温中降逆药同用，以加强降逆止呃之功。冶肾虚腰痛，用刀豆二粒，包于猪腰子内，烧熟食之。
 
 【用量用法】10—15克，煎服。
