--- a/ok/bc/bc11-0.0.2.0.0.md
+++ b/ok/bc/bc11-0.0.2.0.0.md
@@ -10,4 +10,4 @@
 
 青皮、陈皮同出一物，前者为未成熟果实，后者为成熟果实。陈皮善理脾肺之气而燥湿化痰，凡脾胃气滞、痰湿内阻之征均可使用；青皮药力较强，偏疏肝胆之气，长于疏肝破气、消积化滞，凡肝气郁滞， 食积不化之证，皆常应用。
 
-【用量用法】 3 —10克，煎服。本品生用破气散积力胜，易损人正气，故不易久服或过量，气虛者尤当慎用。醋炒者擅入肝经，可增强疏肝破气之功，故常醋炒以入药。
+【用量用法】 3 —10克，煎服。本品生用破气散积力胜，易损人正气，故不易久服或过量，气虚者尤当慎用。醋炒者擅入肝经，可增强疏肝破气之功，故常醋炒以入药。
