--- a/ok/bc/bc16-0.2.6.0.0.md
+++ b/ok/bc/bc16-0.2.6.0.0.md
@@ -6,6 +6,6 @@
 
 竹沥味甘，性寒。入心、肺、胃经。甘寒滑润，功类竹茹，但清化热痰作用优于竹茹，并善于透达经络之痰。除用于痰热咳嗽外，凡中风不语、昏迷、癫痫、惊厥等痰涎壅盛者，均可使用。 痰留经络，肢体麻木、拘急之证，亦可使用。然性寒伤胃滑肠，故寒嗽便溏者忌用。
 
-【临证应用】竹沥用于中风痰迷、惊痫癲狂，可单用或配姜汁同用饮服。若与清肺化痰的贝母等同用，可治肺热痰壅，咳逆胸闷。近年考治乙脑、流胸之高热、痰迷、呕吐，用竹沥频饮， 获得较好疗效。至于治消渴、血虛自汗等证，现不见用。
+【临证应用】竹沥用于中风痰迷、惊痫癲狂，可单用或配姜汁同用饮服。若与清肺化痰的贝母等同用，可治肺热痰壅，咳逆胸闷。近年考治乙脑、流胸之高热、痰迷、呕吐，用竹沥频饮， 获得较好疗效。至于治消渴、血虚自汗等证，现不见用。
 
 【用量用法】30—50克，冲服。
