--- a/ok/bc/bc16-0.3.3.0.0.md
+++ b/ok/bc/bc16-0.3.3.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**紫菀为化痰止咳之要药**。为菊科多年生草本植物紫菀的根及根茎。《备要》谓：“根作节，紫色润软者良。”指干燥根茎节丛虽须根，细长而柔软，不易折断，外面色紫，有细纵皱。 秋季采收，晒干切段。生用或蜜炙用。	
 
-本品苦甘，微温。入肺经。苦温下气而不燥，甘温润肺而不腻，性质和平，为下气化痰止咳良药。对咳嗽之证，不论寒热， 外感、内伤，只要咳嗽有痰，咯吐不畅者，无论新久，皆可醅伍应用。如《本章正义 》“紫菀柔润有余，虽曰舍辛而温，非燥烈可比，专能开肺郁，定喘降逆，宣通窒滞。兼疏肺家气血， 凡风寒外束，肺气壅塞，咳呛不爽，喘促哮吼及气火燔灼，郁为肺痈，咳吐脓血，痰臭腥秽诸证，无不治之。 ”然本品究属苦温乏味，阴虛火旺或有实热之燥咳、咯血等证，非有适宜配伍，不得运用。喉痹痰多亦可配用。
+本品苦甘，微温。入肺经。苦温下气而不燥，甘温润肺而不腻，性质和平，为下气化痰止咳良药。对咳嗽之证，不论寒热， 外感、内伤，只要咳嗽有痰，咯吐不畅者，无论新久，皆可醅伍应用。如《本章正义 》“紫菀柔润有余，虽曰舍辛而温，非燥烈可比，专能开肺郁，定喘降逆，宣通窒滞。兼疏肺家气血， 凡风寒外束，肺气壅塞，咳呛不爽，喘促哮吼及气火燔灼，郁为肺痈，咳吐脓血，痰臭腥秽诸证，无不治之。 ”然本品究属苦温乏味，阴虚火旺或有实热之燥咳、咯血等证，非有适宜配伍，不得运用。喉痹痰多亦可配用。
 
 【临证应用】紫菀亦可用于多种咳嗽，如外感风寒、痰多咳嗽，可配荆芥、白前、陈皮等；肺虚久咳咯血，可配阿胶、知母、川贝等伍用，如紫菀汤。
 
