--- a/ok/bc/bc16-0.3.4.0.0.md
+++ b/ok/bc/bc16-0.3.4.0.0.md
@@ -10,6 +10,6 @@
 
 【临证应用】款冬花为治嗽要药，可用于多种咳嗽，临床随其证候表现配伍他药同用。功效与紫菀相似，并常与紫菀相须为用，以增强治喘咳之效。本品辛温，所以肺寒痰多的喘咳尤为多用，可配麻黄、细辛等辛温之品；若偏于热者，配知母、贝母、 桑白皮等，如款冬花汤；若劳嗽痰中带血又可配百合、紫菀、贝母等用。
 
-款冬花与紫菀二者性皆和平，作用亦相似，都能润肺化痰， 止咳，寒热虛实各种咳嗽皆可配伍应用。然紫菀功偏袪痰；冬花主在止咳，二药相须为用，可增强疗效。
+款冬花与紫菀二者性皆和平，作用亦相似，都能润肺化痰， 止咳，寒热虚实各种咳嗽皆可配伍应用。然紫菀功偏袪痰；冬花主在止咳，二药相须为用，可增强疗效。
 
 【用量用法】 5—10克，煎服。外感咳嗽宜生用，内伤咳嗽宜炙用，蜜炙后可增加润肺止咳的疗效。
