--- a/ok/bc/bc16-0.3.8.0.0.md
+++ b/ok/bc/bc16-0.3.8.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】 (1)血痔：肛门生痔，有小肉突起，伴有出血、 疼痛等证。
 
-**马兜铃清肃之中又有开泄之功，以清肺降气，止咳平喘为主要功效**。为马兜铃科多宇生落叶藤本植物北马兜铃和马兜铃的果实。此果体轻而虛，状如马项之铃，熟则开裂为六瓣。汪昂在总义中曰：“药之为物，各有形性气质，其入诸经，有固形而相类者， ……。”马兜铃果寒其形象肺，而入肺，即是此意。秋季果实由绿变黄时采摘，晒干，生用或蜜炙用。	
+**马兜铃清肃之中又有开泄之功，以清肺降气，止咳平喘为主要功效**。为马兜铃科多宇生落叶藤本植物北马兜铃和马兜铃的果实。此果体轻而虚，状如马项之铃，熟则开裂为六瓣。汪昂在总义中曰：“药之为物，各有形性气质，其入诸经，有固形而相类者， ……。”马兜铃果寒其形象肺，而入肺，即是此意。秋季果实由绿变黄时采摘，晒干，生用或蜜炙用。	
 
 本品苦辛而寒，入肺与大肠。辛寒散肺热，苦寒降肺气，故能清肺降气，止咳平喘。治一切肺热咳嗽痰喘。肺与大肠相表里， 肺热清，则肠热亦清，故又可治痔疮肿痛。
 
