--- a/ok/bc/bc18-0.0.21.0.0.md
+++ b/ok/bc/bc18-0.0.21.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**罂粟壳具有敛肺、涩肠、止痛之功**。为罂粟科一年生或二年生草本植物罂粟的成熟蒴果的外壳。又名米壳、御米壳。干燥果壳略呈球形，内部空洞质轻。原产于欧洲南部，我国也有少量栽培。果实成熟时摘下晒干，去蒂及种子，用时醋炒或蜜炙用。
 
-本品味酸涩，性平，有毒。归肺、大肠、肾经。功专收涩可敛肺止咳，涩肠止泻，固肾涩精，用治肺虛久咳，久泻久痢，遗精滑泄等证。此外，本品止痛功效亦颇显著，可治疗心腹筋骨诸痛
+本品味酸涩，性平，有毒。归肺、大肠、肾经。功专收涩可敛肺止咳，涩肠止泻，固肾涩精，用治肺虚久咳，久泻久痢，遗精滑泄等证。此外，本品止痛功效亦颇显著，可治疗心腹筋骨诸痛
 
 【临证应用】肺虚久咳，可单用，蜜炙研末服；虚劳喘咳自汗，又可与乌梅等配用。治久泻不止，《经验方》以它配伍乌梅肉、大枣肉水煎温服；久痢及血痢，以之配木香、黄连、生姜同用，如木香散。
 
