--- a/ok/bc/bc03-0.1.8.0.0.md
+++ b/ok/bc/bc03-0.1.8.0.0.md
@@ -8,4 +8,4 @@
 
 【临证应用】决明子既能清肝火，又能益肾阴，兼能散热。治肝火上炎或肝经风热所致的目赤肿痛，羞明多泪，头痛等证，可与菊花、蔓荆子、木贼、川芎等用，如决明子散。若肝肾不足之青盲内障，可与生地、枸杞、玄参等同用，如决明丸。用于热结便秘或肠燥便秘，可单用煎服或研末用，亦可与火麻仁、郁李仁等配伍。与野菊花、黄芩、夏枯草等同用，治疗肝阳上亢之眩晕效果良好。此外据现代研究尚可降低血清胆固醇。 
 
-【用量用法】   5—15克，煎服，或单味开水泡服。大便溏泻，血虛眩晕者忌服。   
+【用量用法】   5—15克，煎服，或单味开水泡服。大便溏泻，血虚眩晕者忌服。   
