--- a/ok/bc/bc03-0.3.4.0.0.md
+++ b/ok/bc/bc03-0.3.4.0.0.md
@@ -2,11 +2,11 @@
 
 **〔原文〕苦咸微寒。色黑入肾。能壮水以制火，散无根浮游之火**，肾水受寒，真阴失守、孤阳无根，发为火病。**益精明目，利咽喉，通二便。治骨蒸**（1）**传尸**（2），**伤寒阳毒发斑**（3），亦有阴证发斑者。**懊？**郁闷不舒。**烦渴，温疟洒洒，喉痹咽痛**，本肾药而治上焦火证，壮水以制火也。肾脉贯肝膈，入肺中，循喉咙，系舌本。肾虚则相火上炎，此喉痹咽肿咳嗽吐血之所由来也。潮热骨蒸，亦本于此。此与黄芪能治下焦带浊崩淋同义。**瘰疬结核**，寒散火，咸软坚。**痈疽鼠瘘**（4）。音漏。**脾虚泄泻者忌用。蒸过焙用，勿犯铜器。恶黄芪、山茱萸、****姜、枣，反藜芦**。
 
-【讲解】（1）骨蒸：形容其发热自骨髓透发而出，多由阴虛内热所致。（2）传尸：即肺痨，又称劳瘵、传尸劳、尸注等。（3）阳毒发斑：又称阳斑。凡发斑因于外感热病，属于实热性者，统属阳斑范围。（4）鼠瘘：颈腋部淋巴结核，即瘰疬，溃后久不收口，形成瘘管，故名。	
+【讲解】（1）骨蒸：形容其发热自骨髓透发而出，多由阴虚内热所致。（2）传尸：即肺痨，又称劳瘵、传尸劳、尸注等。（3）阳毒发斑：又称阳斑。凡发斑因于外感热病，属于实热性者，统属阳斑范围。（4）鼠瘘：颈腋部淋巴结核，即瘰疬，溃后久不收口，形成瘘管，故名。	
 
 **玄参滋肾养阴，泻火解毒**。为玄参科多年生草本植物玄参的根。又名元参、黑参。挖出根，反复堆、晒，至内部色黑，切片生用。
 
-本品甘苦咸寒，苦寒则能泻火解毒，甘寒则能滋水养阴，咸寒质润，又能软坚润燥。入肾经，能壮肾水制浮游之火，具有清上彻下之功，为滋阴降火之要药。常用治热病伤阴，心烦口渴、懊？不眠，或肾水不足，虛火上扰之咽痛目赤，骨蒸劳热，及温病伤阴劫液，津枯便秘，阳毒发斑和瘰疬痰核，痈肿等证。
+本品甘苦咸寒，苦寒则能泻火解毒，甘寒则能滋水养阴，咸寒质润，又能软坚润燥。入肾经，能壮肾水制浮游之火，具有清上彻下之功，为滋阴降火之要药。常用治热病伤阴，心烦口渴、懊？不眠，或肾水不足，虚火上扰之咽痛目赤，骨蒸劳热，及温病伤阴劫液，津枯便秘，阳毒发斑和瘰疬痰核，痈肿等证。
 
 玄参性寒滑肠，故凡脾虚泄泻，食少便溏者不宜使用。
 
