--- a/ok/bc/bc03-0.3.7.0.0.md
+++ b/ok/bc/bc03-0.3.7.0.0.md
@@ -5,6 +5,6 @@
 
 【讲解】**童便具有滋阴降火，止血消瘀之功。取十岁以下健康儿童的小便，故名为童便**。一般去头尾，用中间一段。
 
-本品味咸性凉，：入肺、肝、肾经。有滋明降火之功，可治阴虚发热；还能止血消瘀，用治劳伤咳血、吐血、衄血、产后血瘀、血晕、跌打损伤、血瘀作痛等证。《本草经疏》曰：人尿为除劳热骨蒸，咳嗽吐血及妇人产后血晕闷绝之圣药。其味咸而走血，咸寒能伏虛热，使火不上炎而血不妄溢，是以能疗诸血之证也。
+本品味咸性凉，：入肺、肝、肾经。有滋明降火之功，可治阴虚发热；还能止血消瘀，用治劳伤咳血、吐血、衄血、产后血瘀、血晕、跌打损伤、血瘀作痛等证。《本草经疏》曰：人尿为除劳热骨蒸，咳嗽吐血及妇人产后血晕闷绝之圣药。其味咸而走血，咸寒能伏虚热，使火不上炎而血不妄溢，是以能疗诸血之证也。
 
 【临证应用】用于吐血不止，童便加糖矫味，乘热服，毎次150—300毫升，日服二次。
