--- a/ok/bc/bc10-0.0.9.0.0.md
+++ b/ok/bc/bc10-0.0.9.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】 **全蝎功专息风止痉，并能攻毒散结，通络止痛**。为钳蝎科动物东亚钳蝎的干燥全体。如单用尾（后腹部），称为“蝎尾”，又名“蝎梢”。晒干或微火焙干用。
 
-本品辛平有毒，主入肝经。具良好的息风止痉功效，为治痉挛抽搐之要药。因属性平，故急慢惊风，不论热证、寒证均可随证配伍，颇有良效。又能攻毒散结、通络止痛，用治偏正头痛、关节痹痛以及瘰疬疮毒等证，功效亦佳。惟辛散有毒，血虛生风者慎用。以研末吞服效强。习认为蝎尾力大，现大多全用，而效力并无显著不同。
+本品辛平有毒，主入肝经。具良好的息风止痉功效，为治痉挛抽搐之要药。因属性平，故急慢惊风，不论热证、寒证均可随证配伍，颇有良效。又能攻毒散结、通络止痛，用治偏正头痛、关节痹痛以及瘰疬疮毒等证，功效亦佳。惟辛散有毒，血虚生风者慎用。以研末吞服效强。习认为蝎尾力大，现大多全用，而效力并无显著不同。
 
 【临证应用】 全蝎用于急慢惊风，口眼㖞斜，破伤风等痉挛抽搐之证，常与蜈蚣相须为用，以加强息风止痉之功，如止痉散。用于急惊风，可与羚羊角、钩藤、天麻等同用，如钩藤饮；脾虚慢惊，则与补脾益气之党参、白术、天麻等同用，如醒脾散；用于中风口眼㖞斜，常与僵蚕、白附子同用，即牵正散；治破伤风，多与天南星、蝉蜕、僵蚕等配伍，如五虎追风散。用于偏正头痛、风湿关节挛痛，可单用研末温酒调服，即能见效，亦可与蜈蚣、僵蚕、制川乌等制成散剂冲服，则效更佳。用于疮疡肿毒、瘰疬结核以及痄腮等证，可与山栀、蜂蜡等制膏外敷，如全蝎膏。
 
