--- a/ok/bc/bc11.md
+++ b/ok/bc/bc11.md
@@ -22,7 +22,7 @@
 
 凡用以调理气分，疏畅气机，使气行通顺，而治疗气机不畅诸病的药物，称为理气药。
 
-气分疾病主要包括气虚与气滞两类。气虛病证应使用补气药来治疗。本章所介绍的理气药，主要是用于气滞病证的一类药物。
+气分疾病主要包括气虚与气滞两类。气虚病证应使用补气药来治疗。本章所介绍的理气药，主要是用于气滞病证的一类药物。
 
 所谓“气滞”，就是指气机运行不畅、气行发生阻滞的情况。揆其原因，不外乎饮食不慎、饥饱失常、寒暖失调、瘀血、外伤等，都能影响人体气机的运行，形成气滞之证。
 
@@ -30,6 +30,6 @@
 
 本类药物大多气香性温，其味辛苦，故善行散或泄降，分别具有消胀满、止疼痛、疏肝气、调脾（胃）气、理肺气等功效，故适用于前述诸证。
 
-使用本类药物时，必须针对病情选择相应的药物，并采用适宜的配伍。如湿浊中阻而引起脾胃气滞之证者，宜配芳香化湿药；兼有湿热者，可视其证情，酌加清热燥湿药或清利湿热药；寒湿困脾者，须配温中燥湿药；如饮食不慎而食积不化者，则配消食导滞之品；兼脾胃虛弱者，又当与益气健脾药合用。肝气郁滞者，兼证较多，可视具体证情，酌配养阴柔肝、活血和营、止痛、健脾等药。至于肺气壅滞由外邪侵袭而致者，当配合宣肺化痰止咳药；如痰热郁肺，咳喘痰稠者，当配合清热化痰之品。
+使用本类药物时，必须针对病情选择相应的药物，并采用适宜的配伍。如湿浊中阻而引起脾胃气滞之证者，宜配芳香化湿药；兼有湿热者，可视其证情，酌加清热燥湿药或清利湿热药；寒湿困脾者，须配温中燥湿药；如饮食不慎而食积不化者，则配消食导滞之品；兼脾胃虚弱者，又当与益气健脾药合用。肝气郁滞者，兼证较多，可视具体证情，酌配养阴柔肝、活血和营、止痛、健脾等药。至于肺气壅滞由外邪侵袭而致者，当配合宣肺化痰止咳药；如痰热郁肺，咳喘痰稠者，当配合清热化痰之品。
 
-理气药大都辛温香燥，易于耗气伤阴，故气虛及阴亏者宜慎用。
+理气药大都辛温香燥，易于耗气伤阴，故气虚及阴亏者宜慎用。
