--- a/ok/bc/bc16-0.4.0.0.0.md
+++ b/ok/bc/bc16-0.4.0.0.0.md
@@ -6,7 +6,7 @@
 
 二、清化热痰药：此类药偏寒凉，主用于热痰或阴虚燥咳， 以及由痰热所引起的癫狂惊癣、瘿瘤、瘰疬等证。其中前胡清热化痰之中善能宣散风热，故为外感咳嗽所常用。桔梗长于宣通上焦，开提肺气，有良好的宣肺祛痰、排脓消痈之功，故多用于外邪犯肺，肺气不宣之咳嗽、咯痰不利、咽痛、音哑以及肺痛咳吐脓血等证。贝母为清热润肺化痰之佳品，主治痰热咳嗽、阴虚燥咳、劳嗽咯血等证，并兼能散结消肿，故常用于痈肿瘰疬之证， 贝母又有川贝、浙贝之分，川贝长于润肺化痰，宜于阴虚肺燥之虚证；浙贝偏于清热化痰，散结力强，宜于风热或痰火郁结之实证；土贝母为另一类植物，只用于外料疮疡肿毒。瓜蒌性偏寒滑， 清润之力较大，除清热化痰外，又长于宽胸散结、润肠通便，故多用于痰热咳嗽、胸痹、结胸、肠便秘之证，临床应用又有皮、仁及全用之分。瓜蒌皮偏于清热化痰，宽胸利气；瓜蒌仁偏于润肺化痰，润肠通便；全瓜蒌则兼皮、仁的功效。竹茹善于清胃止呕；竹沥性较寒滑，善透经络之痰，以治痰阻经络，中风口噤诸证。天竹黄善于清心定惊，并能豁痰开窍，然性较缓和，故小儿惊痫方中多用之。礞石长于堕痰镇惊，主用于惊痫癫狂、顽痰内结之证。浮海石、海蛤壳、海藻、昆布均以化痰软坚为主要功效，但浮海石、海蛤壳多用于痰热咳嗽、咯痰不利之证；海藻、 昆布主用于瘿瘤瘰疬、肝脾肿大。瓦愣子专消顽痰坚结，又善制酸止痛。胖大海有清宣肺气之功，多用于肺热声哑、痰热咳嗽，既可入复方应用，又能单用代茶，还有清肠通便之效。荸荠有清热化痰消积之功。荠苨为清肺、化痰、解毒之品。	
 
-三、止咳平喘药：本类药除止咳外，还能平喘，用治咳嗽喘息之证，临床上可根据病情选择使用。其中杏仁又有苦甜之分， 苦杏仁苦温润肺，止咳平喘之中兼有宣散之功，故常用于外邪犯肺，肺气不降之喘咳痰多之证；甜杏仁甘平润肺，多用于肺虛劳嗽，但润肠通便之功，两者是相同的。紫苑、款冬花、百部均为润而不燥之品，都能润肺止咳，无论新久寒热虚实咳嗽皆可应用， 然紫菀化痰力胜，冬花、百部止咳功强，且百部又能杀虫灭虱。 桑白皮性寒而沉降，消肿力强，能行水而消痰，利水而消肿；此外，近代研究尚有一定的降压作用，可用于治高血压病。葶苈子寒降之性较大，长于泻肺行水，祛痰定喘，宜于痰饮喘咳，水肿胀满之实证。马兜铃止咳平喘之中善能清肺降气，宜用于肺热咳喘。枇杷叶化痰止咳之中又长于降逆止呕，以治气逆呕哕之证。	
+三、止咳平喘药：本类药除止咳外，还能平喘，用治咳嗽喘息之证，临床上可根据病情选择使用。其中杏仁又有苦甜之分， 苦杏仁苦温润肺，止咳平喘之中兼有宣散之功，故常用于外邪犯肺，肺气不降之喘咳痰多之证；甜杏仁甘平润肺，多用于肺虚劳嗽，但润肠通便之功，两者是相同的。紫苑、款冬花、百部均为润而不燥之品，都能润肺止咳，无论新久寒热虚实咳嗽皆可应用， 然紫菀化痰力胜，冬花、百部止咳功强，且百部又能杀虫灭虱。 桑白皮性寒而沉降，消肿力强，能行水而消痰，利水而消肿；此外，近代研究尚有一定的降压作用，可用于治高血压病。葶苈子寒降之性较大，长于泻肺行水，祛痰定喘，宜于痰饮喘咳，水肿胀满之实证。马兜铃止咳平喘之中善能清肺降气，宜用于肺热咳喘。枇杷叶化痰止咳之中又长于降逆止呕，以治气逆呕哕之证。	
 
 ![](img/16.01.jpg)
 
