--- a/ok/bc/bc18-0.0.2.0.0.md
+++ b/ok/bc/bc18-0.0.2.0.0.md
@@ -8,10 +8,10 @@
 
 【临证应用】五味子上敛肺气，下滋肾阴，对肺虚久咳及肺肾不足之喘咳，有止咳平喘之效，常配熟地、山药、山茱萸等，如都气为专治肾虚喘促。若素有寒饮，而又外感风寒，咳嗽喘急，痰多稀薄者，又可以本品配辛温宣散的细辛、干姜伍用，如五味细辛汤，方中五味、细辛同用，一收一散，既可防止肺气耗散太过，又可防止敛肺遏邪之弊。	
 
-五味既能生津，又可敛汗，故适用于口渴、多汗之证，如热伤气阴，汗多，体倦，气短，口渴，脉虚者，多以五味子配麦冬、人参即生脉散。五味子配人参、麻黄根、牡蛎等同用，无论阳虚自汗、阴虚盗汗都可用，如柏子仁丸。至于消渴证，则多与黄芪、 生地、麦冬、天花粉等益气生津药同用，如黄芪汤。借五味子补肾涩精、收敛止泻之功，治遗精、遗尿多配桑螵蛸、龙骨等补肾收涩之品，治睥肾虛寒，久泻、五更泻，又常和补骨脂、肉豆蔻、吴茱萸伍用，如四神丸。	
+五味既能生津，又可敛汗，故适用于口渴、多汗之证，如热伤气阴，汗多，体倦，气短，口渴，脉虚者，多以五味子配麦冬、人参即生脉散。五味子配人参、麻黄根、牡蛎等同用，无论阳虚自汗、阴虚盗汗都可用，如柏子仁丸。至于消渴证，则多与黄芪、 生地、麦冬、天花粉等益气生津药同用，如黄芪汤。借五味子补肾涩精、收敛止泻之功，治遗精、遗尿多配桑螵蛸、龙骨等补肾收涩之品，治睥肾虚寒，久泻、五更泻，又常和补骨脂、肉豆蔻、吴茱萸伍用，如四神丸。	
 
 此外，本品尚有养心安神之效，心气耗散所致的心悸、怔忡、失眠等证，配麦卷、酸枣仁等均可，如天王补心丹。近年来，单用或配其他药制成糖浆、酊剂、片剂治神经衰弱有效。并研末内服，治传染性肝炎，有降低转氨酶的作用。
 
-【用量用法】2— 6克，煎服。研末服每次1~3克。生用清虚热，止虛劳久嗽之力较强。故《备要》说入劳嗽药生用； 炒用滋肾补虚之功较强，故滋补多熟用。还有用醋、蜜拌蒸制者， —般认为醋制者长于收敛，蜜制则增强补力，减少酸涩之性。
+【用量用法】2— 6克，煎服。研末服每次1~3克。生用清虚热，止虚劳久嗽之力较强。故《备要》说入劳嗽药生用； 炒用滋肾补虚之功较强，故滋补多熟用。还有用醋、蜜拌蒸制者， —般认为醋制者长于收敛，蜜制则增强补力，减少酸涩之性。
 
 另外，根据临床实践，敛肺滋肾，生津止汗宜用北五味子， 风寒在肺宜用南五味子。 
