--- a/ok/bc/bc07-0.9.0.0.0.md
+++ b/ok/bc/bc07-0.9.0.0.0.md
@@ -1,6 +1,6 @@
 ## **茴香**
 
-**〔原文〕大茴辛热。入肾、膀胱。暖丹田（1），补命门，开胃下食，调中止呕。疗小肠冷气，㿗疝阴肿（2）**，疝有七种，气、血、寒、水、筋、狐、㿗也。肝经病，不属肾经，以厥阴肝脉络阴器也。多因寒湿所致，亦有挟虛者，当加参、术于温散药中。**干湿脚气。多食损目发疮。**
+**〔原文〕大茴辛热。入肾、膀胱。暖丹田（1），补命门，开胃下食，调中止呕。疗小肠冷气，㿗疝阴肿（2）**，疝有七种，气、血、寒、水、筋、狐、㿗也。肝经病，不属肾经，以厥阴肝脉络阴器也。多因寒湿所致，亦有挟虚者，当加参、术于温散药中。**干湿脚气。多食损目发疮。**
 
 **小茴辛平，理气开胃，亦治寒疝。食料宜之。**
 
