--- a/ok/bc/bc09-0.2.5.0.0.md
+++ b/ok/bc/bc09-0.2.5.0.0.md
@@ -8,7 +8,7 @@
 
 珍珠母亦入心、肝二经，具有平肝潜阳、镇心安神之功，造用于肝阳上亢的头痛头晕及心神不宁，烦躁失眠等证，兼能明目消翳，治目昏翳障。珍珠亦能明目除翳，还有较强的解毒敛疮作用，为眼科、外科常用药。金、铁以镇心为用，治心悸癫痫。
 
-养心安神药，有滋养宁神作用，以治阴虚血亏所致的心悸、眩晕、失眠多梦、虛烦健忘之证。其中酸枣仁养肝胆以安神，益阴以止汗，为治虚烦不眠、惊悸健忘之良药。柏子仁养心以安神，润肠以通便，治血不养心的心悸失眠和阴虚血少的肠燥便秘。远志袪痰利窍，能交通心肾，以治痰阻心窍、心神不安、惊悸健忘以及痰多咳嗽等证为宜；合欢花善于解郁安神，用于忿怒忧郁之失眠、虚烦不安者。合欢皮则以活血止痛，治骨折痈肿为主。
+养心安神药，有滋养宁神作用，以治阴虚血亏所致的心悸、眩晕、失眠多梦、虚烦健忘之证。其中酸枣仁养肝胆以安神，益阴以止汗，为治虚烦不眠、惊悸健忘之良药。柏子仁养心以安神，润肠以通便，治血不养心的心悸失眠和阴虚血少的肠燥便秘。远志袪痰利窍，能交通心肾，以治痰阻心窍、心神不安、惊悸健忘以及痰多咳嗽等证为宜；合欢花善于解郁安神，用于忿怒忧郁之失眠、虚烦不安者。合欢皮则以活血止痛，治骨折痈肿为主。
 
 ![](img/9表1.jpg)
 
