--- a/ok/bc/bc18-0.0.16.0.0.md
+++ b/ok/bc/bc18-0.0.16.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**金樱子有固精、缩尿、止带之功**。为蔷薇科常绿攀缘灌木植物金樱子的成熟果实或除去瘦果的成熟花托（金樱子肉）。呈倒卵形，略似花瓶或石榴而小，外皮红黄色，上端存花萼如盘状，下端渐尖。去净核，晒干生用。
 
-本品味酸涩性平。入肾、膀胱、大肠经。功专酸涩收敛，有固精、缩尿、止带之功。主治肾虛精关不固的遗精、滑精；膀胱不约之遗尿、尿频，以及妇女带下等证。尚兼有收敛固肠止泻之效，亦治脾虛久泻之证。然收敛之品，凡有实火实邪者忌用。
+本品味酸涩性平。入肾、膀胱、大肠经。功专酸涩收敛，有固精、缩尿、止带之功。主治肾虚精关不固的遗精、滑精；膀胱不约之遗尿、尿频，以及妇女带下等证。尚兼有收敛固肠止泻之效，亦治脾虚久泻之证。然收敛之品，凡有实火实邪者忌用。
 
 【临证应用】金櫻子单用熬膏服，即金樱子膏，用治遗精、 滑精、尿频等。若配芡实，名水陆二仙丹，治遗精、尿频、白浊、白带等。配益气健脾药党参、白术、山药等同用，有涩肠止泻之功，以疗泄泻下痢久不止者。此外，还可用于脱肛、子宫下垂、 崩漏等，皆赖其收涩之功，此即所谓“涩可固脱”。
 
