--- a/ok/bc/bc18-0.0.17.0.0.md
+++ b/ok/bc/bc18-0.0.17.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**覆盆子具有益肾、固精、缩尿之功**。为蔷薇科落叶灌木植物掌叶覆盆子的未成熟果实。晒干生用。
 
-本品味甘酸、性微温。入肝、肾经。甘能补益，酸可收敛，性温而不燥烈，功能补肾阳而无伤阴之弊，固滑脱而无凝滞之害， 有益下封藏之功。多用于肾虛不固，遗精、滑精、遗尿、尿频等证，也可用于肾虚阳痿及肝肾不足之目暗不明。然肾虚有火，小便短涩者忌用。
+本品味甘酸、性微温。入肝、肾经。甘能补益，酸可收敛，性温而不燥烈，功能补肾阳而无伤阴之弊，固滑脱而无凝滞之害， 有益下封藏之功。多用于肾虚不固，遗精、滑精、遗尿、尿频等证，也可用于肾虚阳痿及肝肾不足之目暗不明。然肾虚有火，小便短涩者忌用。
 
 【临证应用】覆盆子治梦遗滑精，可配沙苑子、山茱萸、 芡实等同用。治遗尿、尿频，多桑螵峭、益智仁、金樱子同用。 若配枸杞子、菟丝子、五味子、车前子等，即五子衍宗丸，可治肾虚阳痿、精滑不固及不育等证。配熟地、枸杞子、女贞子，又可治肝肾虚亏所致目暗不明。
 
