--- a/ok/bc/bc08.md
+++ b/ok/bc/bc08.md
@@ -19,6 +19,6 @@
 
   开窍药气味芳香，性善走窜，多归心经，具有通关开窍、启闭醒神的作用，适用于邪陷窍闭之神昏，以及惊痫、中风等病出现的卒然昏厥之证。
 
-  神昏有虚、实之分，实证即闭证，以口噤、握拳、脉来有力为辨证依据。闭证又分寒闭、热闭，寒闭多见面青、身凉、苔白、脉迟；热闭多见面赤身热、苔黄脉数。二者均可应用开窍药。唯前者宜用温开，或配祛寒药同用；后者宜用凉开，或配清热药同用。虛证即脱证，多见神昏冷汗、肢凉、脉微欲绝等证，当用回阳救脱之法，不可用开窍药，以免进一步耗伤元气。
+  神昏有虚、实之分，实证即闭证，以口噤、握拳、脉来有力为辨证依据。闭证又分寒闭、热闭，寒闭多见面青、身凉、苔白、脉迟；热闭多见面赤身热、苔黄脉数。二者均可应用开窍药。唯前者宜用温开，或配祛寒药同用；后者宜用凉开，或配清热药同用。虚证即脱证，多见神昏冷汗、肢凉、脉微欲绝等证，当用回阳救脱之法，不可用开窍药，以免进一步耗伤元气。
 
   本类药物为急救、治标之品，只可暂用，不宜久服，久服泄人元气。又因本类药物以辛香为主，易于挥发，内服只做丸散，一般不入煎剂。
