--- a/ok/bc/bc18-0.0.18.0.0.md
+++ b/ok/bc/bc18-0.0.18.0.0.md
@@ -6,7 +6,7 @@
 
 【讲解】**桑螵蛸功能补肾固涩，而有缩尿固精之功**。螳螂科昆虫大刀螂和小刀螂， 或巨斧螳螂的卵鞘。深秋至翌年春均可采收，除去树皮，置沸水中浸杀其卵，晒干入药。
 
-本品甘咸涩平。入肝、肾经。味甘能补，咸以入肾，涩主收敛，为补肾助阳、缩尿固精之要用于肾虛阳衰引起的遗精、 滑精、遗尿、尿频、白带过多等证，而尤以遗尿尿频最为常用。 以其可固涩助阳 ，故凡阴虛火旺、膀胱有热而小便短数者不宜用。
+本品甘咸涩平。入肝、肾经。味甘能补，咸以入肾，涩主收敛，为补肾助阳、缩尿固精之要用于肾虚阳衰引起的遗精、 滑精、遗尿、尿频、白带过多等证，而尤以遗尿尿频最为常用。 以其可固涩助阳 ，故凡阴虚火旺、膀胱有热而小便短数者不宜用。
 
 【临证应用】 桑螵蛸用于肾虚遗尿、小便频数及遗精滑泄，前者常与党参、龙骨、 牡蛎等同用，如桑螵蛸散；后者多与五味子、菟丝子等同用，如菟丝子丸。与补肾助阳鹿茸、肉苁蓉、淫羊藿等同用，也可用于阳痿早泄。
 
