--- a/ok/bc/bc18-0.0.24.0.0.md
+++ b/ok/bc/bc18-0.0.24.0.0.md
@@ -2,7 +2,7 @@
 
 本章药物种类较多，但各有其特点。其中山茱萸、芡实、金樱子、覆盆子、桑嫖蛸、刺猬皮等药，均有固肾、涩精、縮尿之效，以治遗精、滑精、遗尿、尿频之证；然山茱萸又长于滋朴肝肾，兼有敛汗之功；芡实尚具健脾止泻之能；金樱子收涩之性较强，并能止带、止泻；覆盆子，桑螵峭长于缩尿，兼能助阳；刺猬皮还可收敛止血，用于便血、痔漏。 
 
-五味子、五倍子、乌梅、訶子、罂粟壳均有敛肺止咳、涩肠止泻之效，治肺虛久咳、肠滑久泻之征。其中五味子还能生津敛汗、涩精止遗，具有安神之功；五倍子亦能止汗，外用则治疮癣肿毒、皮肤湿烂；乌梅并能生津止渴，又为安蛔治厥之良药，对蛔厥腹痛有较好的疗效；訶子生用能清肺热，可治久咳失音，煨用主涩肠止泻；罂粟壳并有止痛之效。
+五味子、五倍子、乌梅、訶子、罂粟壳均有敛肺止咳、涩肠止泻之效，治肺虚久咳、肠滑久泻之征。其中五味子还能生津敛汗、涩精止遗，具有安神之功；五倍子亦能止汗，外用则治疮癣肿毒、皮肤湿烂；乌梅并能生津止渴，又为安蛔治厥之良药，对蛔厥腹痛有较好的疗效；訶子生用能清肺热，可治久咳失音，煨用主涩肠止泻；罂粟壳并有止痛之效。
 
 肉豆蔻、赤石脂、禹余粮、石檣皮均能涩肠止泻，以治久泻各痢为主。其中肉豆蔻还能温中行气；赤石脂，禹余粮又能止大:便下血；石榴皮则兼杀虫。
 
