--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -611,5 +611,5 @@
 
 不拘伤寒杂症，正气虚者，其舌苔必娇嫩而薄，或淡红或微白，皆可投补。若见黄而厚，白而腻，总属内邪未清，不可遽进补药。
 
-此条凭舌苔以验其虛实，是分别宜补宜清的总诀。若唇淡舌白，润滑而有齿印，足徵脏腑阴寒，则又宜温中回阳之法。
+此条凭舌苔以验其虚实，是分别宜补宜清的总诀。若唇淡舌白，润滑而有齿印，足徵脏腑阴寒，则又宜温中回阳之法。
 
