--- a/ok/qs/qs01_02.md
+++ b/ok/qs/qs01_02.md
@@ -86,7 +86,7 @@
 
 **聆**líng，读灵，听。 **颤**zhàn，读战，发抖。 **昭**zhāo，读招，明显。 **啼**ti，读题，有声无泪。 **嗞**zī，读资，小动物的叫声。**嘎**shà，读沙，嗓音嘶哑。 **遁**dun，读盾，逃走。
 
-诊察小儿的方法之一是仔细地闻听声音，才能明察病情的变化。五声是从相应的五脏发出的，从五声的变化可以了解到五脏的病情。如心有病时声音急促且多语多笑；肺有病时声音悲浊不清；肝有病时多狂叫呼喊；脾有病时声音轻微颤抖；肾有病时声音长细呻吟。以上五种声音明显表示出来后，属什么脏的病证也就清楚了。另外，诊察小儿啼哭时也有不同情况，干哭有声而无眼泪的多为腹痛；哭而多泪就要考虑到是惊风将要发作了。如果发出类似小动物叫的叹息声而又烦躁不安的多属心经内热生烦；声音嘶哑且沉重的多为外感风寒；气有余的实证，声音多雄壮响亮；不足的虚证，声音多短促轻微；语言多而身体发热的，多属阳证、腑证。反之，少言语而身体寒凉的，多属阴证、脏证。狂言乱语烦躁不安的，是邪热极盛；如果出现了说胡话、神志昏迷，是邪入心包的表现，病多凶险，预后不良。如果声音象鸭叫，在喉中哑然难出，或声音急促不能回转，且哭而无泪的，多属于正气衰败，生命垂危。总之，疾病的寒热虛实是可以从声音中辨別的，听到了什么声音，就能知道是什么性质的疾病。
+诊察小儿的方法之一是仔细地闻听声音，才能明察病情的变化。五声是从相应的五脏发出的，从五声的变化可以了解到五脏的病情。如心有病时声音急促且多语多笑；肺有病时声音悲浊不清；肝有病时多狂叫呼喊；脾有病时声音轻微颤抖；肾有病时声音长细呻吟。以上五种声音明显表示出来后，属什么脏的病证也就清楚了。另外，诊察小儿啼哭时也有不同情况，干哭有声而无眼泪的多为腹痛；哭而多泪就要考虑到是惊风将要发作了。如果发出类似小动物叫的叹息声而又烦躁不安的多属心经内热生烦；声音嘶哑且沉重的多为外感风寒；气有余的实证，声音多雄壮响亮；不足的虚证，声音多短促轻微；语言多而身体发热的，多属阳证、腑证。反之，少言语而身体寒凉的，多属阴证、脏证。狂言乱语烦躁不安的，是邪热极盛；如果出现了说胡话、神志昏迷，是邪入心包的表现，病多凶险，预后不良。如果声音象鸭叫，在喉中哑然难出，或声音急促不能回转，且哭而无泪的，多属于正气衰败，生命垂危。总之，疾病的寒热虚实是可以从声音中辨別的，听到了什么声音，就能知道是什么性质的疾病。
 
 闻诊，包括了听声音和嗅气味两个方面，前者凭听觉以诊察病人的语言、呼吸、咳嗽等声音；后者凭嗅觉以诊察病人的气味以及病人排泄物的气味来鉴别疾病。本歌诀只介绍了闻声音一项。
 
