--- a/ok/qs/qs01_03.md
+++ b/ok/qs/qs01_03.md
@@ -52,7 +52,7 @@
 
 **干**gān，读甘，冒犯。
 
-人的形体有强壮和虚弱的不同，肌肉亦有脆弱与坚实的差异。强壮而坚实的人外邪就难以侵犯。虛弱的人则容易被外邪侵袭。饮食少而外形肥胖的人，那并不是真正的强壮，而是体内有痰湿。最不好的是形体肥而按上去象绵絮那样。饮食多而形体消瘦，那并不一定是虚弱，而是火旺过于消耗造成。形体消瘦的最怕那种肉干着骨的现象，这种消瘦预后极不好，难以治疗。
+人的形体有强壮和虚弱的不同，肌肉亦有脆弱与坚实的差异。强壮而坚实的人外邪就难以侵犯。虚弱的人则容易被外邪侵袭。饮食少而外形肥胖的人，那并不是真正的强壮，而是体内有痰湿。最不好的是形体肥而按上去象绵絮那样。饮食多而形体消瘦，那并不一定是虚弱，而是火旺过于消耗造成。形体消瘦的最怕那种肉干着骨的现象，这种消瘦预后极不好，难以治疗。
 
 **7.形气已脱。脉调犹死。形气不足，脉调可医。**
 
