--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -36,7 +36,7 @@
 
 **竟** 从头到尾。**岐**gi，读奇，歧骨，大指次指交叉处骨。 **锐**  锐骨，桡骨茎突。 **上** 寸部。**下** 尺部。
 
-诊脉的方法有七种，用手在皮肤上轻按的叫“浮”，比浮略重按一些的叫“中”，用手重按的叫“沉”，从寸部向前推移叫“上”，从尺部向后推移叫“下”，从左往右推叫“右”，从右往左推叫“左”，亦称内推外推。浮、中、沉、上竟、下竟、左右推等七诊，是讲推寻取脉的方法。男子以左手的脉大有力为好，女子以右手的脉大有力为适宜。并认为男子两尺部脉经常表现为虛的多，而女子的尺部脉经常表现为坚实（所谓男左女右）。
+诊脉的方法有七种，用手在皮肤上轻按的叫“浮”，比浮略重按一些的叫“中”，用手重按的叫“沉”，从寸部向前推移叫“上”，从尺部向后推移叫“下”，从左往右推叫“右”，从右往左推叫“左”，亦称内推外推。浮、中、沉、上竟、下竟、左右推等七诊，是讲推寻取脉的方法。男子以左手的脉大有力为好，女子以右手的脉大有力为适宜。并认为男子两尺部脉经常表现为虚的多，而女子的尺部脉经常表现为坚实（所谓男左女右）。
 
 另外，还有三部遍身诊脉法，即头面为上部，手为中部，足为下部。而三部中各有天地人三候，三部合为九候。上部脉在额颊、耳前部位，中部脉在寸口及岐锐骨附近的合谷穴和神门穴部位，下部脉在足三阴经部位，候肝肾脾胃。
 
@@ -156,7 +156,7 @@
 
 **癥瘕** zhengjia，读真假，腹内积块。
 
-濡脉多为阳气虛，弱脉多阴血亏，微脉主一切虛证。比较严重的虚证多见浮散无根的欲脉。革脉多主亡血失精，或妇人流产、带下、崩漏等疾患。牢脉主疝气、腹部积块（癥瘕：坚硬不移叫癥，时聚时散叫瘕）以及心腹部寒气作痛。虚脉主所有的虚证，实脉主所有的实证，芤脉多见于失血。
+濡脉多为阳气虚，弱脉多阴血亏，微脉主一切虚证。比较严重的虚证多见浮散无根的欲脉。革脉多主亡血失精，或妇人流产、带下、崩漏等疾患。牢脉主疝气、腹部积块（癥瘕：坚硬不移叫癥，时聚时散叫瘕）以及心腹部寒气作痛。虚脉主所有的虚证，实脉主所有的实证，芤脉多见于失血。
 
 **15.迟寒主脏，阴冷相干，有力寒痛，无力虚寒。**
 
@@ -208,7 +208,7 @@
 
 **讶**yá，读亚，诧导 **囊**náng读如“狼”，阴囊。
 
-因劳倦损伤脾土，脉象应当虛弱，反而自汗出脉躁不宁，为脉证相逆。疟疾病的脉象为弦，弦而迟多为寒证，弦而数多为热证，若疟疾见代散二脉，多为邪盛正衰，为难治。泻下多里虚。脉见沉、小、滑、弱为顺，反见沉、大、实、数而又身热为逆。呕吐反胃脉以浮滑为顺，反见沉、数、细、涩为气少津衰，同时伴有大便秘结者为逆。霍乱病见到代脉也不必惊讶，可能是一时清浊混乱所致的脉不接续，如果反见脉伏而不出，并见舌头卷缩、阴囊也收缩，四肢厥冷，此为阴寒极盛之证。
+因劳倦损伤脾土，脉象应当虚弱，反而自汗出脉躁不宁，为脉证相逆。疟疾病的脉象为弦，弦而迟多为寒证，弦而数多为热证，若疟疾见代散二脉，多为邪盛正衰，为难治。泻下多里虚。脉见沉、小、滑、弱为顺，反见沉、大、实、数而又身热为逆。呕吐反胃脉以浮滑为顺，反见沉、数、细、涩为气少津衰，同时伴有大便秘结者为逆。霍乱病见到代脉也不必惊讶，可能是一时清浊混乱所致的脉不接续，如果反见脉伏而不出，并见舌头卷缩、阴囊也收缩，四肢厥冷，此为阴寒极盛之证。
 
 **16.嗽脉多浮，浮濡易治，沉伏而紧，死期将至。**
 
@@ -474,7 +474,7 @@
 
 比迟脉稍快一点者为缓脉，迟而细小不流利者为涩脉，迟而浮大无力的为虚脉。
 
-迟主五脏病或痰湿内盛。迟而沉者为痼疾癍瘕，迟而有力主积寒疼痛，迟而无力可以判定为虛寒。寸部脉迟为上焦有寒，关部脉迟为中焦寒盛所致的疼痛，尺部脉迟主肾虛腰痛脚重、或大小便失禁、或疝气睾丸疼痛。
+迟主五脏病或痰湿内盛。迟而沉者为痼疾癍瘕，迟而有力主积寒疼痛，迟而无力可以判定为虚寒。寸部脉迟为上焦有寒，关部脉迟为中焦寒盛所致的疼痛，尺部脉迟主肾虚腰痛脚重、或大小便失禁、或疝气睾丸疼痛。
 
 **【数脉】**
 
@@ -506,7 +506,7 @@
 
 数而如绞绳索，左右弹动不已为紧脉，数而时有歇止者为促脉，数脉独显于关部为动脉。
 
-数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虛火上浮，冶宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
+数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虚火上浮，冶宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
 
 **【滑脉】**
 
@@ -592,7 +592,7 @@
 
 虚脉用手轻按，觉得大而迟缓，脉状空旷无边类似山谷一样极度空虚，不要把芤脉和虚咏混为一谈，芤脉于浮大之中却似慈葱一样边实中空。
 
-脉虚而身热为伤暑，或气血亏虚而致心失所养，见自汗心悸等症，也可见于阴虛发热，总的治疗原则是养营益气。寸部脉虛为血不养心，关部脉虚为腹胀食滞，两手尺部脉虚为骨蒸劳热、痿、痹、精血耗伤等症。
+脉虚而身热为伤暑，或气血亏虚而致心失所养，见自汗心悸等症，也可见于阴虚发热，总的治疗原则是养营益气。寸部脉虚为血不养心，关部脉虚为腹胀食滞，两手尺部脉虚为骨蒸劳热、痿、痹、精血耗伤等症。
 
 **【实脉】**
 
@@ -694,7 +694,7 @@
 
 洪脉来时如波涛拍岸、盛似波澜壮阔，要知道实脉的脉形，就得看到它的差別之处在于轻取或重按都是弦长而坚实。
 
-洪脉为阳气亢盛之脉，阴血多虚，如火热炎盛多为心火亢盛，关脉洪时为脘腹胀满、翻胃呕逆，必须及早治疗，尺部脉洪为阴津亏耗，见泄泻下痢。左寸部脉洪为心火亢盛，右寸部脉洪为肺金被刑，肝火为左关洪，胃火见右关洪，肾阴亏虛，相火妄动为尺部脉洪。
+洪脉为阳气亢盛之脉，阴血多虚，如火热炎盛多为心火亢盛，关脉洪时为脘腹胀满、翻胃呕逆，必须及早治疗，尺部脉洪为阴津亏耗，见泄泻下痢。左寸部脉洪为心火亢盛，右寸部脉洪为肺金被刑，肝火为左关洪，胃火见右关洪，肾阴亏虚，相火妄动为尺部脉洪。
 
 按：“阴虚泄痢可愁知”一句，原文为“阴虚泄痢可踌躇”(chou chu,读仇除，犹豫不定之意)，可能为原编者所改。
 
@@ -848,7 +848,7 @@
 
 **相类诗：见芤、牢脉**
 
-革脉的脉体形状好象按鼓皮一样，轻举浮取坚硬，重按沉取时又觉空虚。革脉具有芤脉中空。弦脉强劲的特点，似乎为二脉相合的复合脉，主寒邪为患而又精血亏虛。妇女小产，崩漏，男子营精亏损或遗精均可见到革脉。
+革脉的脉体形状好象按鼓皮一样，轻举浮取坚硬，重按沉取时又觉空虚。革脉具有芤脉中空。弦脉强劲的特点，似乎为二脉相合的复合脉，主寒邪为患而又精血亏虚。妇女小产，崩漏，男子营精亏损或遗精均可见到革脉。
 
 **【牢脉】**
 
@@ -866,7 +866,7 @@
 
 牢脉的脉形为弦长实大而坚实，常常在深部的筋骨间才能见到。革脉是弦而芤，且在浮部出现，革脉为虚证，而牢脉主实证。
 
-牢脉主寒邪积结于内的里实证，多见肝木乘脾土而致的心腹寒痛以及疝㿗癥瘕等病症，此均为实，牢脉主实，是脉证相符为顺，失血阴虛见牢脉，则脉证不符为逆。
+牢脉主寒邪积结于内的里实证，多见肝木乘脾土而致的心腹寒痛以及疝㿗癥瘕等病症，此均为实，牢脉主实，是脉证相符为顺，失血阴虚见牢脉，则脉证不符为逆。
 
 **【濡脉】**
 
@@ -892,7 +892,7 @@
 
 濡脉虽然与细脉、弱脉、微脉相近似，但还是有区别的，濡脉足浮而柔细，弱脉是沉而柔细，微脉是浮而微弱欲绝，细脉是沉而近似于微脉。
 
-濡脉主亡血、阴精亏损的病症，多为髓海、丹田不足，阴虛盗汗，骨蒸劳热，妇女崩中，湿困脾阳等证。寸部脉濡为卫阳不固而自汗，关部脉湍为脾气虛弱，尺部脉濡为精血亏损，下焦虛寒较甚，可用温补肾阴之剂进行治疗。
+濡脉主亡血、阴精亏损的病症，多为髓海、丹田不足，阴虚盗汗，骨蒸劳热，妇女崩中，湿困脾阳等证。寸部脉濡为卫阳不固而自汗，关部脉湍为脾气虚弱，尺部脉濡为精血亏损，下焦虚寒较甚，可用温补肾阴之剂进行治疗。
 
 **【弱脉】**
 
@@ -958,7 +958,7 @@
 
 细脉的搏动连续不断，极细如丝，但举指重按沉取也能摸到。在春夏之季和青少年身上见到细脉为不正常的现象，因为春夏之季为阳气旺盛之时，青少年本气血旺盛，见到细脉则为脉时不符为逆。相反，在秋冬季节和老年体弱时见到细脉，这是脉时相符为顺。
 
-细脉萦萦细如丝，主气血虚衰、七情不和顺所引起的内伤虛证、劳损。见到细脉如杲不是水湿下侵腰肾，便是精血耗伤及汗泄所致。寸部脉细多为呕吐频繁，关部脉细多为脾胃虚弱，脾虚失运则腹胀。尺部脉细为丹田寒冷，泄泻下痢，遗精等引起的精津枯竭。
+细脉萦萦细如丝，主气血虚衰、七情不和顺所引起的内伤虚证、劳损。见到细脉如杲不是水湿下侵腰肾，便是精血耗伤及汗泄所致。寸部脉细多为呕吐频繁，关部脉细多为脾胃虚弱，脾虚失运则腹胀。尺部脉细为丹田寒冷，泄泻下痢，遗精等引起的精津枯竭。
 
 **【伏脉】**
 
