--- a/ok/qs/qs02.md
+++ b/ok/qs/qs02.md
@@ -14,7 +14,7 @@
 
 **白术甘温，健脾强胃，止泻除湿，兼袪痰痞。**
 
-白术味甘苦，性温，功能健脾燥湿。常用于因脾胃虚弱不能运化水湿而引起的泄泻、水肿，以及因痰湿停留所致的胸腹胀满的“痰痞”证。此外，本品还能安胎，用于妊娠脾气虛，胎气不安之证。
+白术味甘苦，性温，功能健脾燥湿。常用于因脾胃虚弱不能运化水湿而引起的泄泻、水肿，以及因痰湿停留所致的胸腹胀满的“痰痞”证。此外，本品还能安胎，用于妊娠脾气虚，胎气不安之证。
 
 **茯苓味淡，渗湿利窍，白化痰涎，赤通水道。**
 
@@ -28,17 +28,17 @@
 
 **当归甘温，生血补心，扶虚益损，逐淤生新。**
 
-当归味辛甘，性温，功能补血、活血。心主身之血脉，所以有“生血补心”之效，常用于头晕眼花、心悸失眠、面色㿠白等多种血虛亏损的病证。并且有去瘀血、生新血的功效。用于妇女月经不调、痛经、经闭，以及痈疽肿痛等证。
+当归味辛甘，性温，功能补血、活血。心主身之血脉，所以有“生血补心”之效，常用于头晕眼花、心悸失眠、面色㿠白等多种血虚亏损的病证。并且有去瘀血、生新血的功效。用于妇女月经不调、痛经、经闭，以及痈疽肿痛等证。
 
 **白芍酸寒，能收能补，泻痢痛腹，虚寒勿与。**
 
 **与勿** 与，给予。勿与，即禁用。
 
-白芍味酸苦，性微寒，功能收敛和补血养阴，并能平肝缓急止痛。常用于泄泻、痢疾、腹痛，以及因阴虛血亏、肝阳偏亢所引起的胸胁脘腹疼痛、四肢拘挛、月经不调、多汗等证。但属虚寒性病证者不用或慎用。
+白芍味酸苦，性微寒，功能收敛和补血养阴，并能平肝缓急止痛。常用于泄泻、痢疾、腹痛，以及因阴虚血亏、肝阳偏亢所引起的胸胁脘腹疼痛、四肢拘挛、月经不调、多汗等证。但属虚寒性病证者不用或慎用。
 
 **赤芍酸寒，能泻能散，破血通经，产后勿犯。**
 
-赤芍味酸苦，性微寒，功能泻肝火、散痈肿、破淤血、通经闭。适用于热毒痈肿和妇女淤血阻滞的月经停闭，以及因血行不畅所致的各种疼痛。但对产后气血虛弱的病人不宜应用。
+赤芍味酸苦，性微寒，功能泻肝火、散痈肿、破淤血、通经闭。适用于热毒痈肿和妇女淤血阻滞的月经停闭，以及因血行不畅所致的各种疼痛。但对产后气血虚弱的病人不宜应用。
 
 **生地微寒，能消温热，骨蒸烦劳，养阴凉血。**
 
@@ -292,7 +292,7 @@
 
 **沙参味甘淡，消肿排脓，补肝益肺，退热除风。**
 
-沙参味甘淡，性微寒，功能清肺热、养肺阴，并消肿排脓。用于肺热阴虛引起干咳少痰、两胁作痛、咳嗽咯血等症。此外，又能补肝，可除肝虚风热。
+沙参味甘淡，性微寒，功能清肺热、养肺阴，并消肿排脓。用于肺热阴虚引起干咳少痰、两胁作痛、咳嗽咯血等症。此外，又能补肝，可除肝虚风热。
 
 **丹参味苦，破积调经，生新去恶，祛除带崩。**
 
@@ -630,7 +630,7 @@
 
 **兜**dou，读都。**熏**xun，读勋。
 
-马兜铃味苦辛，性寒，功能清肺肠之热，止咳平喘。可治肺热咳嗽、痰多喘咳，以及肺虛有热的喘咳；并治痔疮肿痛出血。
+马兜铃味苦辛，性寒，功能清肺肠之热，止咳平喘。可治肺热咳嗽、痰多喘咳，以及肺虚有热的喘咳；并治痔疮肿痛出血。
 
 **百合味甘，安心定胆，止嗽消浮，痈疽可啖。**
 
@@ -978,7 +978,7 @@
 
 **覆盆子甘，肾损精竭，黑须明眸，补虚续绝。**
 
-覆盆子味甘酸，性平，功能补肝滋肾，固精。可治肾虚精关不固的遗精、滑精，并能明目，黑须发，是补肾虛的有效药。
+覆盆子味甘酸，性平，功能补肝滋肾，固精。可治肾虚精关不固的遗精、滑精，并能明目，黑须发，是补肾虚的有效药。
 
 **合欢味甘，利人心志，安脏明目，快乐无虑。**
 
@@ -986,7 +986,7 @@
 
 **金樱子涩，梦遗精滑，禁止遗尿，寸白虫杀。**
 
-金樱子味酸涩，性平，功能固精缩尿、涩肠止泻。莕治肾虛引起的遗精、滑精、小便频数、遗尿等症。
+金樱子味酸涩，性平，功能固精缩尿、涩肠止泻。莕治肾虚引起的遗精、滑精、小便频数、遗尿等症。
 
 金樱花味酸涩，性平，有杀寸白虫的作用。
 
@@ -1244,7 +1244,7 @@
 
 **五劳七伤** 肝劳、心劳、脾劳、肺劳、肾劳，统称“五劳”，大饱伤脾、大怒气逆伤盱、强力举重久坐湿地伤肾、形寒饮冷伤肺、忧愁思虑伤心、风雨寒暑伤形.、大恐惧不节伤志，统称“七伤”。
 
-黄精味甘，性平，有补脾润肺、益精的作用。可治脏腑虚损的劳伤病，如脾胃虛弱、肺虚咳嗽、病后体虚、精血不足等症。本品补虚功效较大。
+黄精味甘，性平，有补脾润肺、益精的作用。可治脏腑虚损的劳伤病，如脾胃虚弱、肺虚咳嗽、病后体虚、精血不足等症。本品补虚功效较大。
 
 **何首乌甘，添精种子，黑发悦颜，强身延纪。**
 
