--- a/ok/qs/qs03_18.md
+++ b/ok/qs/qs03_18.md
@@ -68,7 +68,7 @@
 
 本方由人参、生地黄、白茯苓、白蜜等四味药组成，功能养阴润肺，主治虚劳干咳，咽燥咯血。
 
-本方加沉香、琥珀，名臞仙琼玉膏，功能润肺降逆，主治虛劳咳血，胸中隐痛。
+本方加沉香、琥珀，名臞仙琼玉膏，功能润肺降逆，主治虚劳咳血，胸中隐痛。
 
 **8.百合固金汤**
 
