--- a/ok/qs/qs04.md
+++ b/ok/qs/qs04.md
@@ -24,7 +24,7 @@
 
 **肩背痛是气有余，小便数欠或汗出，**
 
-**气虛亦痛溺色变，少气不足以报息。**
+**气虚亦痛溺色变，少气不足以报息。**
 
 **臑**nao，读闹，指上臂，屈肘称臑内。 **廉**lian，读连，指侧边而言。 **瞀**mao，读帽。心胸闷乱，视力模糊。
 
@@ -258,7 +258,7 @@
 
 **然骨** 指舟骨粗隆之下。（足背内侧緣，内踝前下方）。
 
-**心悬** 心虛如悬吊空中一样，形容心悸。**肠澼** 痢疾之古称，此处指泄泻病症。**痿厥**  痿，指下肢痿弱；厥，指逆冷。
+**心悬** 心虚如悬吊空中一样，形容心悸。**肠澼** 痢疾之古称，此处指泄泻病症。**痿厥**  痿，指下肢痿弱；厥，指逆冷。
 
 足少阴肾经：从脚小趾下边开始，斜向脚底心，出于舟骨粗隆下，沿内踝之后，分支进入脚跟中，上向小腿内，出腘窝内侧，上大腿内后侧，通过脊柱属于肾，络于膀胱。
 
