--- a/ok/qs/qs05.md
+++ b/ok/qs/qs05.md
@@ -170,7 +170,7 @@
 
 **下损** 肝、肾方面的虚损证候。 **房帏**  帏，wei，读韦，帐子。房帏，指房事。  **迩**  er，读耳，近。  **元阳** 指肾阳。**肾水**  指肾阴。
 
-下损证候产生的原因，是由于房中太过，损伤了肾阴或肾阳所致。肾阴亏虛的，用六味地黄丸；肾阳亏虚的，用八味地黄丸。各家介绍因房事太过所致虚痨病的治疗，不过是按上述两方化裁运用罢了。
+下损证候产生的原因，是由于房中太过，损伤了肾阴或肾阳所致。肾阴亏虚的，用六味地黄丸；肾阳亏虚的，用八味地黄丸。各家介绍因房事太过所致虚痨病的治疗，不过是按上述两方化裁运用罢了。
 
 **甘药调，回生理，建中汤，金匮轨。**
 
@@ -298,7 +298,7 @@
 
 **胸痹** 病名，指胸满、胸痛的病证。
 
-胸痹病，并不是偶然发生的，大都由于胸中阳气不宣而致，栝蒌薤白白酒汤，能转旋胸中阳气，起到宽胸止痛的作用。如果胸痹是属于虚寒引起的，可用大建中汤补虚助阳，驱寒散痹填虛。
+胸痹病，并不是偶然发生的，大都由于胸中阳气不宣而致，栝蒌薤白白酒汤，能转旋胸中阳气，起到宽胸止痛的作用。如果胸痹是属于虚寒引起的，可用大建中汤补虚助阳，驱寒散痹填虚。
 
 ## **膈食反胃第八**
 
@@ -350,7 +350,7 @@
 
 **冲逆** 此处指冲脉之气上逆。
 
-虚证的气喘，须用补或温的治疗方法。同时，久病虚证的气喘，例从脾肾着眼，脾虚挟饮宜用苓桂术甘汤；肾虛不纳宜用肾气丸。厲于冲脉上逆的喘证，多表现为气从少腹上冲心或咽喉，象小猪奔跑那样向上冲突，应采用平冲镇逆的方剂。若在喘逆短气的同时，全身震动，则宜采用真武汤温肾镇饮以治其源。
+虚证的气喘，须用补或温的治疗方法。同时，久病虚证的气喘，例从脾肾着眼，脾虚挟饮宜用苓桂术甘汤；肾虚不纳宜用肾气丸。厲于冲脉上逆的喘证，多表现为气从少腹上冲心或咽喉，象小猪奔跑那样向上冲突，应采用平冲镇逆的方剂。若在喘逆短气的同时，全身震动，则宜采用真武汤温肾镇饮以治其源。
 
 **金水母，主诸坤，六君子，妙难言，他标剂，忘本根。**
 
@@ -394,7 +394,7 @@
 
 **元化** 东汉末年著名医家华佗的名字。
 
-五皮饮是华元化治水肿的方子，此方以“皮”治“皮”，不伤中气，治疗阳水，可在此方基础上加入木通；防己、赤小豆之类；治阴水则加肉桂、干姜、附子之类；若患者体质不虚而肿势较盛的为“实肿”，可加萝卜子、枳实；体质已虛，久肿脉弱者，应加人参、白术；若肿甚小便不利、兼有气急喘促症状的，宜用真武汤加减，以上都是治水肿的一般常用方法，可以参考采用，但这些方法若与《金匮要略》书中所载相比较，还是有高低之分的。
+五皮饮是华元化治水肿的方子，此方以“皮”治“皮”，不伤中气，治疗阳水，可在此方基础上加入木通；防己、赤小豆之类；治阴水则加肉桂、干姜、附子之类；若患者体质不虚而肿势较盛的为“实肿”，可加萝卜子、枳实；体质已虚，久肿脉弱者，应加人参、白术；若肿甚小便不利、兼有气急喘促症状的，宜用真武汤加减，以上都是治水肿的一般常用方法，可以参考采用，但这些方法若与《金匮要略》书中所载相比较，还是有高低之分的。
 
 **五水辨，金匮详，补天手，十二方，肩斯道，勿炎凉。**
 
