--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -334,7 +334,7 @@
 
 本方由阿胶、马兜铃、炙甘草、鼠沽子（牛蒡子）、杏仁、糯米等六味药组成。功能补肺止咳。主治肺虚咳嗽，痰粘不易咯出，咽中气梗等证。
 
-月华丸由天门冬、麦门冬、生地黄、熟地黄、山药、百部、川贝母、白茯苓、白菊花、沙参、阿胶、三七、桑叶、獭肝等十四味药组成。功能滋阴润肺。主治阴虛燥热，久咳不已之肺痨病。
+月华丸由天门冬、麦门冬、生地黄、熟地黄、山药、百部、川贝母、白茯苓、白菊花、沙参、阿胶、三七、桑叶、獭肝等十四味药组成。功能滋阴润肺。主治阴虚燥热，久咳不已之肺痨病。
 
 **28.石斛夜光丸**
 
@@ -386,7 +386,7 @@
 
 **夏咳减桂加麦味，冬咳不减味干姜。**
 
-木方由黄芪、人参、肉桂、当归、白术、甘草、陈皮、五味、生姜、大枣等十味药组成。功能助阳益气，补虛理中。主治倦怠懶言，动则气喘，表热自汗。
+木方由黄芪、人参、肉桂、当归、白术、甘草、陈皮、五味、生姜、大枣等十味药组成。功能助阳益气，补虚理中。主治倦怠懶言，动则气喘，表热自汗。
 
 本方即补中益气汤去升麻、柴胡，加肉桂、五味子二味而成，临床运用注意加减变通，寒盛加附子；泄泻加升麻、柴胡、诃子、白蔻、木香；夏月咳去肉桂，加麦冬、五味子;冬月咳再加千姜。
 
@@ -398,5 +398,5 @@
 
 **楫** ji，读疾，划船用的桨。
 
-本方由黄芪，知母，柴胡，升麻，桔梗等五味药组成。功能益气升陷。主治气虛下陷，气短不足以息之证。方中以黄芪为主药，升麻，柴胡，桔梗为辅药，协同建功，好象划浆以助船行。
+本方由黄芪，知母，柴胡，升麻，桔梗等五味药组成。功能益气升陷。主治气虚下陷，气短不足以息之证。方中以黄芪为主药，升麻，柴胡，桔梗为辅药，协同建功，好象划浆以助船行。
 
