--- a/ok/qs/qs03_13.md
+++ b/ok/qs/qs03_13.md
@@ -18,7 +18,7 @@
 
 **栗売阿胶冬五味，敛肺止咳气能增。**
 
-木方由乌悔，人参，桔梗，桑白皮，贝母，罂粟売，阿胶，麦门冬，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虛劳喘咳，曰久不愈，夜间为肾。
+木方由乌悔，人参，桔梗，桑白皮，贝母，罂粟売，阿胶，麦门冬，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虚劳喘咳，曰久不愈，夜间为肾。
 
 ### **【涩肠固脱】**
 
@@ -102,7 +102,7 @@
 
 **黄芩芍药酒丸服，漏下崩中色黑殷。**
 
-木方由黄芩，白芍，龟板，椿根皮，黄柏，香附等六味药组成。功能凉血滋明，固崩止带。主治阴虛火旺所致之崩漏。
+木方由黄芩，白芍，龟板，椿根皮，黄柏，香附等六味药组成。功能凉血滋明，固崩止带。主治阴虚火旺所致之崩漏。
 
 **11.樗树根丸（附，愈带丸)**
 
