--- a/ok/gl/gl06-0.1.2.0.0.md
+++ b/ok/gl/gl06-0.1.2.0.0.md
@@ -57,7 +57,7 @@
 | 寒热真假 | 真寒假热 | 即内有真寒，外见假热，亦称阴盛格阳。因阴寒内盛，逼阳于外，虚阳外浮而致 | 四肢厥冷，大便溏薄，小便清长，喘息气短之里虚寒证，又见身热（反欲近衣被），面红，（浮红娇嫩如妆），口渴（喜热饮），汗出（冷汗淋漓）之假热现象 | 舌淡嫩苔白               | 沉迟微弱或虚大无力 | 内真寒是本质，外热是假象。真寒病在脏腑，以脉象，舌象，里证为依据。假热出现于皮肤表面，虽有热象而非真热 |
 | 寒热真假 | 真热假寒 | 即内有真热，外见假寒，亦称阳盛格阴。因里热炽盛，正邪激争于里，阳气内闭，不能布达于四末而致 | 高热恶热，烦渴饮冷，大便秘结，腹满痛拒按之里实热证，又四肢厥冷之假寒现象 | 舌紅苔黄燥甚或焦燥起芒刺 | 沉数有力           | 内真热是本质，外寒是假象。真热病在脏腑，以脉象，舌象，里证为依据。假寒出现于四肢， 虽有寒象而非真寒 |
 | 虚实真假 | 真虚假实 | 本为虚证，正气不足，因运化无力而致气机不畅，出现气滞之假实现象。即前人所谓“至虚有盛候” | 倦怠乏力，纳呆食少，虚喘气短之虚证，又见腹满胀痛之假实现象，但腹虽满而时作时止,虽腹痛而喜按 | 舌淡胖嫩，苔白           | 弦而弱，按之无力   | 虚为本质，以舌象、脉象及休质为依据。实是假象，四诊合参自可辨明 |
-| 虚实真假 | 真实假虚 | 本为实证，因实邪内闭，气血不能畅达周身，而出现假虚之象。即前人所谓“大实有羸状” | 痰食内滞，大便不通之实证，又见倦怠神疲，纳呆食少之假虚现象，但虽倦怠而声高气粗，虽食少而吞酸、嗳腐 | 舌苔厚腻                 | 沉迟而弦滑有力     | 痰食内滞之实邪为本质，以舌象，脉象，体质及里实为依据。虛是假象，四诊合参自可辨明 |
+| 虚实真假 | 真实假虚 | 本为实证，因实邪内闭，气血不能畅达周身，而出现假虚之象。即前人所谓“大实有羸状” | 痰食内滞，大便不通之实证，又见倦怠神疲，纳呆食少之假虚现象，但虽倦怠而声高气粗，虽食少而吞酸、嗳腐 | 舌苔厚腻                 | 沉迟而弦滑有力     | 痰食内滞之实邪为本质，以舌象，脉象，体质及里实为依据。虚是假象，四诊合参自可辨明 |
 
 
 #### 5.亡阴与亡阳
