--- a/ok/gl/gl06-0.2.0.0.0.md
+++ b/ok/gl/gl06-0.2.0.0.0.md
@@ -34,7 +34,7 @@
 | ---------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ---------- | -------- |
 | 气滞血瘀证 | 多由情志不遂，或闪挫外伤所致<br/>肝气郁结，疏泄失职，气为血帅，气滞血瘀 | 胸胁胀满疼痛，或痞块刺痛拒按，妇女可见痛经，经色紫暗有块     | 紫暗有瘀斑 | 涩、弦   |
 | 气血两虚证 | 气虚日久，伤及阴血，或血虚损及阳气，气血虚弱，失营运润养之功 | 少气懒言，乏力自汗心悸失眠，面色萎黄无华                     | 淡而胖嫩   | 细弱无力 |
-| 气虚血脱证 | 气虚日久，而失固摄之权，气虛下陷，血从下溢                   | 便血或崩漏，同时见气短，倦怠无力，面色㿠白                   | 舌淡       | 细微     |
+| 气虚血脱证 | 气虚日久，而失固摄之权，气虚下陷，血从下溢                   | 便血或崩漏，同时见气短，倦怠无力，面色㿠白                   | 舌淡       | 细微     |
 | 气随血脱证 | 多由妇人崩中产后，或外伤出血所致<br/>血脱则气无所附，故气亦随之而脱 | 大量失血，而现面色㿠白，四肢厥冷，气息微弱，大汗淋漓，甚至昏厥 | 舌淡       | 芤而细微 |
 
 ![](img/6表9津液病辨证简表 .jpg)
