--- a/ok/wk/wk06-1.4.0.0.0.md
+++ b/ok/wk/wk06-1.4.0.0.0.md
@@ -46,7 +46,7 @@
 
 毒热较盛，苔黄厚腻者，加黄芩、黄连；便秘者，加大黄、芒硝。如果系阴液不足而火毒炽盛者，加石斛、天花粉、生地；腐不易脱，亦为脾气不足，加太子参、陈皮、麦芽；气血两亏，毒滞难化者，可用托里消毒散。
 
-3.收口期：实证到了四周左右，脓液渐尽，腐肉脱落，肉芽红活，生长迅速，逐渐收口而愈，虛证之疮面色暗，生长迟缓，久久不能收口，如经适当治疗，亦能转为阳症实证，愈合时间虽长，亦能渐愈。如果局部黑陷平塌，根盘坚硬，脓水稀少，出现高热不退，疼痛不减，心烦呕恶，甚或有神昏痉厥等象，则为毒邪内陷的特征，治疗方法参见十节，如果泄利无度，呃逆不食，声嘶气脱者，一般预后不良。
+3.收口期：实证到了四周左右，脓液渐尽，腐肉脱落，肉芽红活，生长迅速，逐渐收口而愈，虚证之疮面色暗，生长迟缓，久久不能收口，如经适当治疗，亦能转为阳症实证，愈合时间虽长，亦能渐愈。如果局部黑陷平塌，根盘坚硬，脓水稀少，出现高热不退，疼痛不减，心烦呕恶，甚或有神昏痉厥等象，则为毒邪内陷的特征，治疗方法参见十节，如果泄利无度，呃逆不食，声嘶气脱者，一般预后不良。
 
 治法：一般不需内服药，但气血不足者，可补益气血。
 
