--- a/ok/bc/bc17-0.2.10.0.xd.md
+++ b/ok/bc/bc17-0.2.10.0.xd.md
@@ -1,6 +1,6 @@
 ### 续断
 
-【原文】 **苦温补肾，辛温补肝。能宣通血脉而理筋骨。主伤中，补不足**， 《经疏》云：味甘使然。暖子官，缩小便，破瘀血。治腰痛胎漏，怀妊沥血。**崩带遗精；肠风血痢**，《 是斋方》：平胃散一两，川续断二钱半，每服二钱，米饮下。治时痢亦验。**痈痔肿毒。又主金疮折跌**，以功命名。**止痛生肌。女科外科，需为上剂。川产良。状如鸡脚，皮黄皱节节断者真。去向里硬筋，酒浸用。地黄为使。**
+【原文】 **苦温补肾，辛温补肝。能宣通血脉而理筋骨。主伤中，补不足**，<small>《经疏》云：味甘使然。暖子官，缩小便，破瘀血。治腰痛胎漏，怀妊沥血。</small>**崩带遗精；肠风血痢**，<small>《 是斋方》：平胃散一两，川续断二钱半，每服二钱，米饮下。治时痢亦验。</small>**痈痔肿毒。又主金疮折跌**，<small>以功命名。</small>**止痛生肌。女科外科，需为上剂。川产良。状如鸡脚，皮黄皱节节断者真。去向里硬筋，酒浸用。地黄为使。**
 
 【讲解】    **续断具有补肝肾，行血脉，续筋骨之效**。为山萝卜科多年生草本植物续断或川续断的根。传统以产于四川者良。故多有川断之名。本品以身干、体肥、性濡、筋少、气微香者为 佳。可生用，酒炒或盐水炒用。
 
