--- a/ok/bc/bc17-0.2.6.0.0.md
+++ b/ok/bc/bc17-0.2.6.0.0.md
@@ -1,6 +1,6 @@
 ### 仙茅
 
-【原文】**辛热，有小毒。助命火，益阳道，明耳目，补虚劳。治失溺无子，心腹冷气不能食**，温胃。**腰脚冷痹不能行**。暖筋骨。**相火盛者忌服。叶如茅而略阔，根如小指，黄白多涎。竹刀去皮切，糯米泔浸，去赤汁，出毒用。忌铁**。 唐婆罗门始进此方，当时盛传，服之多效。照前制，阴干，蜜丸，酒服，禁牛乳牛肉。许真君书曰: "甘能养肉，辛能养节，苦能养气，咸能养骨，酸能养筋，滑能养肤。和苦酒服之必效也”。
+【原文】**辛热，有小毒。助命火，益阳道，明耳目，补虚劳。治失溺无子，心腹冷气不能食**，<small>温胃。</small>**腰脚冷痹不能行**。<small>暖筋骨。</small>**相火盛者忌服。叶如茅而略阔，根如小指，黄白多涎。竹刀去皮切，糯米泔浸，去赤汁，出毒用。忌铁**。<small> 唐婆罗门始进此方，当时盛传，服之多效。照前制，阴干，蜜丸，酒服，禁牛乳牛肉。许真君书曰: "甘能养肉，辛能养节，苦能养气，咸能养骨，酸能养筋，滑能养肤。和苦酒服之必效也”。</small>
 
 【讲解】  **仙茅辛热性猛，为温补肾阳之专药**。为石蒜科多年生草本植物仙茅的根茎。其根茎延长，可达30 厘米，圆柱状，肉质外皮褐色，其叶3-6 片根出，狭披针形，长10一25厘米，绿白色，米泔水浸泡切片生用。
 
