--- a/ok/bc/bc17-0.2.7.0.0.md
+++ b/ok/bc/bc17-0.2.7.0.0.md
@@ -1,6 +1,6 @@
 ### 菟丝子
 
-【原文】**甘辛和平，凝正阳之气，入足三阴**，脾、肝、肾。**强阴益精。温而不燥，不助相火。治五劳七伤，精寒淋沥，口苦燥渴**。脾虚肾燥而生内热，菟丝益阴清热。**祛风明目，补卫气，助筋脉，益气力，肥健人。**补肝肾之效。《老学庵笔记》予族弟少服菟丝子，凡数年，饮食倍常，血气充盛，忽因浴见背肿，随视随长，乃大疽也。适值金银花开，饮至数斤，肿遂消。菟丝过服，尚能作疽，以此知金石药不可不戒。昂按：此人或感他毒，未可尽归咎于菟丝也。**无根，蔓延草上，子黄如黍粒。得酒良。淘去泥沙，酒浸一宿，曝干捣末。山药为使。**
+【原文】**甘辛和平，凝正阳之气，入足三阴**，<small>脾、肝、肾。</small>**强阴益精。温而不燥，不助相火。治五劳七伤，精寒淋沥，口苦燥渴**。<small>脾虚肾燥而生内热，菟丝益阴清热。</small>**祛风明目，补卫气，助筋脉，益气力，肥健人。**<small>补肝肾之效。《老学庵笔记》予族弟少服菟丝子，凡数年，饮食倍常，血气充盛，忽因浴见背肿，随视随长，乃大疽也。适值金银花开，饮至数斤，肿遂消。菟丝过服，尚能作疽，以此知金石药不可不戒。昂按：此人或感他毒，未可尽归咎于菟丝也。</small>**无根，蔓延草上，子黄如黍粒。得酒良。淘去泥沙，酒浸一宿，曝干捣末。山药为使。**
 
 【讲解】**菟丝子既能补阳，又能益阴，为平补肝肾之良药**。为旋花科一年生寄生性蔓草菟丝子或大菟丝子的成熟种子。生用，或煮熟捣烂作饼用。
 
