--- a/ok/bc/bc17-0.1.6.0.0.md
+++ b/ok/bc/bc17-0.1.6.0.0.md
@@ -1,6 +1,6 @@
 ### 山药
 
-【原文】 **色白入肺，味甘归脾，入脾肺二经。补其不足， 清其虚热**， 阴不足则内热，补阴故能清热。**固肠胃，润皮毛， 化痰涎，止泻痢**。渗湿故化痰止泻。《百一方》：山药半生半炒，米饮下，治噤口痢。**肺为肾母， 故又益肾强阴，治虚损劳伤，**王履云：八味丸用之以强阴。**脾为心子，故又益心气**，子能令母实。**治健忘遗精**。昂按：山药性涩，故治遗精泄泻，而诸家俱未言涩．**生捣敷痈疮， 消肿硬**。山药能消热肿，盖补其气，则邪滞自行。朱丹溪曰：补阳气生者，能消肿硬是也。**色白而坚者入药**。
+【原文】 **色白入肺，味甘归脾，入脾肺二经。补其不足， 清其虚热**，<small> 阴不足则内热，补阴故能清热。</small>**固肠胃，润皮毛， 化痰涎，止泻痢**。<small>渗湿故化痰止泻。《百一方》：山药半生半炒，米饮下，治噤口痢。</small>**肺为肾母， 故又益肾强阴，治虚损劳伤，**<small>王履云：八味丸用之以强阴。</small>**脾为心子，故又益心气**，<small>子能令母实。</small>**治健忘遗精**。<small>昂按：山药性涩，故治遗精泄泻，而诸家俱未言涩。</small>**生捣敷痈疮， 消肿硬**。<small>山药能消热肿，盖补其气，则邪滞自行。朱丹溪曰：补阳气生者，能消肿硬是也。</small>**色白而坚者入药**。
 
 【讲解】   **山药既补脾气，又益脾阴，并补肺肾，且兼涩性**。为薯蓣科多年生蔓生草本植物薯蓣的块根。产于河南怀庆（新乡地区）者为佳，称为怀山药。霜降后采挖，洗净刮去粗皮，晒干或烘干，为毛山药；选祖大的毛山药，用清水浸软，搓揉成圆柱状，晒干、磨光，为光山药。以质坚实，粉性足，色洁白者为佳。切片，生用或炒用。
 
