--- a/ok/bc/bc17-0.1.9.0.0.md
+++ b/ok/bc/bc17-0.1.9.0.0.md
@@ -1,6 +1,6 @@
 ### 大枣
 
-【原文】    **甘温。脾经血分药。补中益气、滋脾土、润心肺、调营卫、缓阴血、生津液、悦颜色、通九窍、助十二经、和百药。伤寒及补剂加用之，以发脾胃升腾之气**。**多食损齿**，齿属肾，土克水。**中满证忌之**。甘令人满。大建中汤心下痞者，减怡，枣与甘草同例。成无己曰：仲景治奔豚用大枣者，滋脾土以平肾气也。治水饮胁痛，有十枣汤，益脾土以胜妄水也。**北产肥润者良**。昂按：金华南枣，更胜于北，徽宁所产，亦有佳者。杀乌附毒。忌葱鱼同食。
+【原文】    **甘温。脾经血分药。补中益气、滋脾土、润心肺、调营卫、缓阴血、生津液、悦颜色、通九窍、助十二经、和百药。伤寒及补剂加用之，以发脾胃升腾之气**。**多食损齿**，<small>齿属肾，土克水。</small>**中满证忌之**。<small>甘令人满。大建中汤心下痞者，减饴，枣与甘草同例。成无己曰：仲景治奔豚用大枣者，滋脾土以平肾气也。治水饮胁痛，有十枣汤，益脾土以胜妄水也。<small>**北产肥润者良**。<small>昂按：金华南枣，更胜于北，徽宁所产，亦有佳者。杀乌附毒。忌葱鱼同食。</small>
 
 【讲解】 **大枣功专补脾益气，养血安神，井能缓和药性**。为鼠李科落叶灌木或小乔木植物枣树的成熟果实，又名红枣。主产于河南、河北、山东、陕西等省。秋季果实成熟时采收，晒干，生用。
 
