--- a/ok/bc/bc17-0.1.4.0.0.md
+++ b/ok/bc/bc17-0.1.4.0.0.md
@@ -1,6 +1,6 @@
 ### 黄芪
 
-【原文】   **甘温。生用固表，无汗能发，有汗能止，**朱丹溪曰：黄芪大补，阳虚自汗，若表虚有邪，汗不出者，服此又能自汗。朱震亨，号丹溪，著《本草补遗》。**温分肉，实腠里，泻阴火(1)， 解肌热。炙用补中，益元气，温三焦，壮脾胃。**脾胃一虚，土不能生金，则肺气先绝，脾胃缓和则肺气旺而肌表固实，补中即所以固表也。**生血生肌**，气能生血，血充则肉长。经曰：血生肉。**排脓内托(2)， 疮痈圣药。**毒气化则成脓，补气故能内托。痈疽不能成脓者，死不治，毒气盛而元气衰也。痘证亦然。**痘证不起， 阳虚无热者宜之。**新安汪机治痘证虚寒不起，用四君子汤加黄苠、紫草多效。间有枯萎而死者，自咎用药之不精，思之至忘寝食。忽悟曰：白术燥湿，茯苓渗水，宜痘浆之不行也。乃减去二味，加官桂、糯米以助其力，因名保元汤。人参、白术、茯苓、甘草，名四君子汤。王好古曰：黄芪实卫气，是表药；益脾胃，是中州药；治伤寒尺脉不至，补肾元，是里药。甄权谓其补肾者，气为水母也。《日华》谓其止崩带者，气盛则无陷下之忧也。《蒙荃》曰：补气药多，补血药亦从而补气，补血药多，补气药亦从而补血。益气汤虽加当归，因势寡，功被参芪所据； 补血汤数倍于当归，亦从当归所引而补血。黄芪一两，当归二钱，名补血汤。气药多而云补血者，气能生血，又有当归为引也。表旺者不宜用，阴虚者宜少用，恐升气于表，而里愈虚矣。汪机，号石山，著《本草会辑》。王好古，号海藏，著《汤液本草》。甄权，著《药性论》。陈日华，著《大明木草》。陈嘉谟，著《本草蒙荃》。**为补药之长，故名耆**。俗作芪。**皮黄肉白，坚实者良。入补中药槌扁，蜜炙；达表生用**。或曰：补肾及治崩带淋浊，宜盐水浸炒。昂按：此说非也。前证用黄芪，非欲抑黄芪使入肾也，取其补中升气，则肾受荫，而带浊崩淋自止，即日华所谓气盛自无陷下之忧也。有上病而下取，有下病而上取，补彼经而益及此经者，此类是也。**茯苓为使。恶龟甲、白鲜皮。畏防风**。李东垣曰：黄芪得防风，其功益大，乃相畏而更以相使也。李东垣著《用药法籇》。
+【原文】   **甘温。生用固表，无汗能发，有汗能止，**<small>朱丹溪曰：黄芪大补，阳虚自汗，若表虚有邪，汗不出者，服此又能自汗。朱震亨，号丹溪，著《本草补遗》。</small>**温分肉，实腠里，泻阴火(1)， 解肌热。炙用补中，益元气，温三焦，壮脾胃。**<small>脾胃一虚，土不能生金，则肺气先绝，脾胃缓和则肺气旺而肌表固实，补中即所以固表也。</small>**生血生肌**，<small>气能生血，血充则肉长。经曰：血生肉。</small>**排脓内托(2)， 疮痈圣药。**<small>毒气化则成脓，补气故能内托。痈疽不能成脓者，死不治，毒气盛而元气衰也。痘证亦然。</small>**痘证不起， 阳虚无热者宜之。**<small>新安汪机治痘证虚寒不起，用四君子汤加黄苠、紫草多效。间有枯萎而死者，自咎用药之不精，思之至忘寝食。忽悟曰：白术燥湿，茯苓渗水，宜痘浆之不行也。乃减去二味，加官桂、糯米以助其力，因名保元汤。人参、白术、茯苓、甘草，名四君子汤。王好古曰：黄芪实卫气，是表药；益脾胃，是中州药；治伤寒尺脉不至，补肾元，是里药。甄权谓其补肾者，气为水母也。《日华》谓其止崩带者，气盛则无陷下之忧也。《蒙荃》曰：补气药多，补血药亦从而补气，补血药多，补气药亦从而补血。益气汤虽加当归，因势寡，功被参芪所据； 补血汤数倍于当归，亦从当归所引而补血。黄芪一两，当归二钱，名补血汤。气药多而云补血者，气能生血，又有当归为引也。表旺者不宜用，阴虚者宜少用，恐升气于表，而里愈虚矣。汪机，号石山，著《本草会辑》。王好古，号海藏，著《汤液本草》。甄权，著《药性论》。陈日华，著《大明木草》。陈嘉谟，著《本草蒙荃》。</small>**为补药之长，故名耆**。<small>俗作芪。</small>**皮黄肉白，坚实者良。入补中药槌扁，蜜炙；达表生用**。<small>或曰：补肾及治崩带淋浊，宜盐水浸炒。昂按：此说非也。前证用黄芪，非欲抑黄芪使入肾也，取其补中升气，则肾受荫，而带浊崩淋自止，即日华所谓气盛自无陷下之忧也。有上病而下取，有下病而上取，补彼经而益及此经者，此类是也。</small>**茯苓为使。恶龟甲、白鲜皮。畏防风**。<small>李东垣曰：黄芪得防风，其功益大，乃相畏而更以相使也。李东垣著《用药法籇》。</small>
 
 【讲解】  (1) 泻阴火：阴火指肝肾的虚火。泻阴火即能除肝肾虚热。(2) 内托：用内服药治疗疮疡的三大治法之一。即运用补益气血的药物，扶助正气，托毒外出，以免毒邪内陷的方法。
 
