--- a/ok/bc/bc17.md
+++ b/ok/bc/bc17.md
@@ -28,7 +28,7 @@
 
 10.熟悉补气、升阳、固表、托疮、柔肝、补血、补阴、养阴、滋阴、壮阳、补肾等概念。
 
-11.熟悉补元气、补心气、补脾气、补肺气、补肺阴、补心阴、补胃阴．补肝阴、补肾阴的概念。
+11.熟悉补元气、补心气、补脾气、补肺气、补肺阴、补心阴、补胃阴、补肝阴、补肾阴的概念。
 
 12.在自学本章全部内容的基础上，重点掌握小结内容。
 
