--- a/ok/bc/bc01-1.1.10.0.0.md
+++ b/ok/bc/bc01-1.1.10.0.0.md
@@ -18,4 +18,4 @@
 芷、防风等配伍，如辛夷散； 若偏于热者，也可与清热之黄芩、
 薄荷、苍耳子等同用。还可与细辛、鹅不食草研末吹鼻，治鼻腔疾病，如急、慢性鼻炎、副鼻窦炎、过敏性鼻炎等，都有较好的疗效。
 
-【用量用法】 3 — 6克，煎服。本品有毛，刺激咽喉，内服吋，宜用纱布包煎。外用适量。
+【用量用法】 3 — 6克，煎服。本品有毛，刺激咽喉，内服时，宜用纱布包煎。外用适量。
