--- a/ok/fk/fk0zl02-0.3.0.0.0.md
+++ b/ok/fk/fk0zl02-0.3.0.0.0.md
@@ -12,7 +12,7 @@
 
 （一）带下与肾、脾的关系
 
-在妇女生理常态中，自十四岁前后，肾精化气，元气初盛始见带下。至发育成熟，则带下津津常润。其经间期乃阳生阴长之氤氲的候，故带下之色泽明净，量亦稍增。妊娠期因阴精聚下，冲任充盛，而带下质较稠厚。绝经之后，真阴不足，肾气渐乏，天癸止竭，月经断绝，于是带下亦涸，阴中失濡。这种生理现象说明带下的出现、泌淖与涸竭，以及量、色、质的变化均有常度，且受肾精、肾气的主宰。“盖白带出于胞宫，精之余也”（《景岳全书•妇人规》）。同吋，带下系阴液，而液的气化、蒸腾乃源于肾。由此可见，带下禀肾收藏、施泄，故尔保持恒常。
+在妇女生理常态中，自十四岁前后，肾精化气，元气初盛始见带下。至发育成熟，则带下津津常润。其经间期乃阳生阴长之氤氲的候，故带下之色泽明净，量亦稍增。妊娠期因阴精聚下，冲任充盛，而带下质较稠厚。绝经之后，真阴不足，肾气渐乏，天癸止竭，月经断绝，于是带下亦涸，阴中失濡。这种生理现象说明带下的出现、泌淖与涸竭，以及量、色、质的变化均有常度，且受肾精、肾气的主宰。“盖白带出于胞宫，精之余也”（《景岳全书•妇人规》）。同时，带下系阴液，而液的气化、蒸腾乃源于肾。由此可见，带下禀肾收藏、施泄，故尔保持恒常。
 
 此外，脾主运化，输布精微。若典气健运，则可转输运化津液各走其道。其液渗于前阴空窍，与精之余和合而为带下。
 
