--- a/ok/gk/gk03-0.3.5.0.0.md
+++ b/ok/gk/gk03-0.3.5.0.0.md
@@ -12,7 +12,7 @@
 
 1.杜加氏征：病人屈曲患肢肘关节，然后用病人的手去扪对侧的肩部，若肘关节能贴近胸壁即为正常。否则即为阳性，说明有肩关节脱位。
 
-2.直尺试验：用一根直尺置于上臂外侧，先靠近肱骨外上髁部，后靠近上臂皮肤，若上端贴于大结节即为正常。若不能靠近大结节，反而靠近肩峰吋即为阳性，说明肱骨头向内脱位。
+2.直尺试验：用一根直尺置于上臂外侧，先靠近肱骨外上髁部，后靠近上臂皮肤，若上端贴于大结节即为正常。若不能靠近大结节，反而靠近肩峰时即为阳性，说明肱骨头向内脱位。
 
 3.肱二头肌长头紧张试验：令病人肘关节屈曲，前臂旋后时，若引起二头肌结节间沟处疼痛即为阳性，说明有二头肌长头腱鞘炎。
 
