--- a/ok/qs/qs01_02.md
+++ b/ok/qs/qs01_02.md
@@ -30,7 +30,7 @@
 
 **忿** fèn，读愤，义同愤。
 
-心情感到喜悦的时候，发出的声音是欣喜奔放的。感到愤怒的时候，声音多愤怒而严肃。心中有悲痛的时候，发出的声音是凄惨嘶呜的。心情愉快的时候，发出的声音也就舒畅和缓。对某事物充满敬佩之意的吋候，发出的声音是恭正肃穆的。心中有可爱事物的时候，所发出的声音是温柔和顺的。
+心情感到喜悦的时候，发出的声音是欣喜奔放的。感到愤怒的时候，声音多愤怒而严肃。心中有悲痛的时候，发出的声音是凄惨嘶呜的。心情愉快的时候，发出的声音也就舒畅和缓。对某事物充满敬佩之意的时候，发出的声音是恭正肃穆的。心中有可爱事物的时候，所发出的声音是温柔和顺的。
 
 人的情感变化对声音有影响，从而可以根据不同的声音变化诊察病人的心理状态，据此推测疾病发生的原因。
 
