--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -370,7 +370,7 @@
 
 **表里阴阳虚实诊，惟在儿科随证参。**
 
-年满一周岁的小儿，就诊时就应当切脉，但因小儿寸口部位短，不能容下三指，所以耍用一指候诊寸关尺三部脉的方法诊脉。浮脉是用很轻的指力在皮肤上就能摸到，沉脉则要重按到筋骨上才能摸到。一呼一吸脉动六次为平和的正常脉，超过六次则为数脉，不到六次为迟脉。滑脉如珠走盘，往来流利。涩脉则为指下感到涩滞，往来艰难。浮、中、沉三部都无力的为虚脉，三部有力为实脉。只有中取无力的为芤脉，微脉则按之细微，似有似无，洪脉来的时候盛大，去的吋候无力，脉快时而一止的为促脉，脉慢时而一止的为结脉。紧脉弦急如按绳索。弦脉如按弓弦，端直而长。浮脉主外感表病，沉脉主内伤里证。数主腑证为阳热，迟主脏病为阴寒凝滞。滑脉多痰，洪脉主火热，微主怯弱不足，弦主痰饮，结主积聚，促脉多主惊痫，芤为失血，涩为血少。沉而紧多主腹痛，浮而紧多主外寒，虚脉主各种虚弱不足，实脉主各种有余的实证，痘疹欲发时脉多洪紧，如果大小不均匀多为中恶的实症。一呼一吸脉动不到三次，是虚寒己极，一呼一吸脉动九次、十次，是热太甚。脉在一呼一吸之间只跳动一、二次，或十一、十二次的，多为死脉，浮散无根或沉伏难出的脉都为难治之证。诊脉虽然可以诊察表里、阴阳、虚实的情状状，但还必须结合临床症状，四诊合参。
+年满一周岁的小儿，就诊时就应当切脉，但因小儿寸口部位短，不能容下三指，所以耍用一指候诊寸关尺三部脉的方法诊脉。浮脉是用很轻的指力在皮肤上就能摸到，沉脉则要重按到筋骨上才能摸到。一呼一吸脉动六次为平和的正常脉，超过六次则为数脉，不到六次为迟脉。滑脉如珠走盘，往来流利。涩脉则为指下感到涩滞，往来艰难。浮、中、沉三部都无力的为虚脉，三部有力为实脉。只有中取无力的为芤脉，微脉则按之细微，似有似无，洪脉来的时候盛大，去的时候无力，脉快时而一止的为促脉，脉慢时而一止的为结脉。紧脉弦急如按绳索。弦脉如按弓弦，端直而长。浮脉主外感表病，沉脉主内伤里证。数主腑证为阳热，迟主脏病为阴寒凝滞。滑脉多痰，洪脉主火热，微主怯弱不足，弦主痰饮，结主积聚，促脉多主惊痫，芤为失血，涩为血少。沉而紧多主腹痛，浮而紧多主外寒，虚脉主各种虚弱不足，实脉主各种有余的实证，痘疹欲发时脉多洪紧，如果大小不均匀多为中恶的实症。一呼一吸脉动不到三次，是虚寒己极，一呼一吸脉动九次、十次，是热太甚。脉在一呼一吸之间只跳动一、二次，或十一、十二次的，多为死脉，浮散无根或沉伏难出的脉都为难治之证。诊脉虽然可以诊察表里、阴阳、虚实的情状状，但还必须结合临床症状，四诊合参。
 
 ### 附2:七言诀（摘自《濒湖脉学》）
 
