--- a/ok/qs/qs05.md
+++ b/ok/qs/qs05.md
@@ -156,7 +156,7 @@
 
 **瘖** yin，读音，哑不能出声。 **喎斜**  喎 wai,读歪， 口眼偏向一侧。 **仆** pu 读铺，向前跌倒。
 
-真正的中风病发生的吋候，出现口不能言、口角、眼暗歪斜、卒然昏迷不醍、倒地等症伏，应首先采用急救措施，或开闭、或固脱，待其病情稍定，再选用柔肝熄风等剂。除此之外，还有一种填实空窍的方法，如《金匮要略》所指“风引汤”之类(方见《金匮要略》）。
+真正的中风病发生的时候，出现口不能言、口角、眼暗歪斜、卒然昏迷不醍、倒地等症伏，应首先采用急救措施，或开闭、或固脱，待其病情稍定，再选用柔肝熄风等剂。除此之外，还有一种填实空窍的方法，如《金匮要略》所指“风引汤”之类(方见《金匮要略》）。
 
 ## 虚痨第三
 
