--- a/ok/yk/yk0zl06-0.1.0.0.0.md
+++ b/ok/yk/yk0zl06-0.1.0.0.0.md
@@ -46,7 +46,7 @@
 
 目痛的性质，应问是刺痛、胀痛、灼痛、涩痛、隐痛、碜痛、剧痛。是隐隐胀痛还是胀痛如裂；还应问目痛时牵连的部位，是连及前额、眼眶、鼻颊或是颞额，或是巅顶、后项。
 
-目痛的兼症亦应问及，如痛时有无发热或恶寒，是否伴有头痛、目眩、目赤、眉棱骨痛、口干及烦躁、恶心、呕吐。眼珠痛与头痛若同时存在，则需问清何者先发作。目珠转动时，疼痛是减轻或是加剧，痛时有无拒按或按之缓解，目痛吋喜得热熨或是凉敷。
+目痛的兼症亦应问及，如痛时有无发热或恶寒，是否伴有头痛、目眩、目赤、眉棱骨痛、口干及烦躁、恶心、呕吐。眼珠痛与头痛若同时存在，则需问清何者先发作。目珠转动时，疼痛是减轻或是加剧，痛时有无拒按或按之缓解，目痛时喜得热熨或是凉敷。
 
 （3）眼痒：主要询问目痒的性质和程度。
 
