--- a/ok/yk/yk0zl06-0.5.6.0.0.md
+++ b/ok/yk/yk0zl06-0.5.6.0.0.md
@@ -48,7 +48,7 @@
 
 1.翳：翳为发于黑睛水膜的混浊，根据病变形态、颜色、深浅程度不同，各有不同的命名。为便于临床运用，这里将其划分为活翳和宿翳两类。
 
-活翳：指活动可变之翳。《草庐拙》谓：“活者，有红有泪有痛，能进能退，浮而活泼未定也”。所以，凡黑睛水膜发生混浊，色呈灰白，边界模糊，翳形浮嫩，表面粗糙，有可变趋势，伴有不同程度的目赤肿痛、畏光流泪症状者，统属活翳（既往的教科书称新翳）范畴。如聚星障、花翳白陷，凝脂翳等均属此类。活翳多为外感，且易传变。其中翳如秤星数枚，或聚或散，布于黑睛，称聚星障。一般说来，聚星障发病早期，稀疏色淡，浮于黑睛表层，抱轮微赤，多为风热外袭，证情较轻。若见星点云集，抱轮红赤明显，兼有畏光、流泪，疼痛较剧，多为肺热肝火。若星翳连缀成片，翳色黄白，多见溃陷，白睛混赤，疼痛羞明，为花翳白陷，多属肝胆火炽。若翳如凝脂，色呈鹅黄或黄绿，疼势剧烈，称凝脂翳，多为火热炽盛，若救治失吋，极易黑睛溃破，黄仁绽出，甚者眼珠塌陷。活翳日久，不见进退，但表面仍粗糙浮肥，久不痊愈，为正虚邪衰之象，聚星障、花翳白陷均常出现此候。因此，临床对活翳必须辨别表里虚实，严密观察其发展变化，不可掉以轻心。
+活翳：指活动可变之翳。《草庐拙》谓：“活者，有红有泪有痛，能进能退，浮而活泼未定也”。所以，凡黑睛水膜发生混浊，色呈灰白，边界模糊，翳形浮嫩，表面粗糙，有可变趋势，伴有不同程度的目赤肿痛、畏光流泪症状者，统属活翳（既往的教科书称新翳）范畴。如聚星障、花翳白陷，凝脂翳等均属此类。活翳多为外感，且易传变。其中翳如秤星数枚，或聚或散，布于黑睛，称聚星障。一般说来，聚星障发病早期，稀疏色淡，浮于黑睛表层，抱轮微赤，多为风热外袭，证情较轻。若见星点云集，抱轮红赤明显，兼有畏光、流泪，疼痛较剧，多为肺热肝火。若星翳连缀成片，翳色黄白，多见溃陷，白睛混赤，疼痛羞明，为花翳白陷，多属肝胆火炽。若翳如凝脂，色呈鹅黄或黄绿，疼势剧烈，称凝脂翳，多为火热炽盛，若救治失时，极易黑睛溃破，黄仁绽出，甚者眼珠塌陷。活翳日久，不见进退，但表面仍粗糙浮肥，久不痊愈，为正虚邪衰之象，聚星障、花翳白陷均常出现此候。因此，临床对活翳必须辨别表里虚实，严密观察其发展变化，不可掉以轻心。
 
 活翳的转归，轻者可消散而痊愈，重者则转为宿翳。
 
