--- a/ok/yk/yk0zl08-0.2.0.0.0.md
+++ b/ok/yk/yk0zl08-0.2.0.0.0.md
@@ -6,7 +6,7 @@
 
 生活起居，工作学习，文体活动都应适当安排，要有规律。不正常的活动，不适当的用眼，可使身心视觉受到损害。如久视可伤血，久卧可伤气，久坐可伤肉，久立可伤骨，久行可伤筋，生活规律失常、房室不节，可耗血伤精，甚至造成内障，故当慎之。
 
-2.避免时邪，调和七情：时邪七情为害，属眼病常见的病因。从预防出发，为避免时邪，需顺应四吋，适其寒温，锻炼身体，结合气功，以增强体质。如时邪广泛流行，一家之内，邻里之中，男女老幼迅速相染者，尽快隔离病人，避免接触，是预防的有效措施。对于工矿、机关、学校、幼儿园、托儿所等集体单位，还可选用适当的预防性药物，及早预防，避免造成流行。
+2.避免时邪，调和七情：时邪七情为害，属眼病常见的病因。从预防出发，为避免时邪，需顺应四时，适其寒温，锻炼身体，结合气功，以增强体质。如时邪广泛流行，一家之内，邻里之中，男女老幼迅速相染者，尽快隔离病人，避免接触，是预防的有效措施。对于工矿、机关、学校、幼儿园、托儿所等集体单位，还可选用适当的预防性药物，及早预防，避免造成流行。
 
 调和七情，即勿喜怒过度，悲哀太甚。因为七情刺激，哭泣悲伤，思虑过度，忿怒暴悖，均可引起眼病。必须七情和畅，愉快乐观，使百脉通调，脏腑安和，方能不病或少病。
 
