--- a/ok/yk/yk1gl05-0.6.0.0.0.md
+++ b/ok/yk/yk1gl05-0.6.0.0.0.md
@@ -6,7 +6,7 @@
 
 早在《龙树菩萨眼论》就有关于本病的记载，彼则简称“内障”，如云“眼不痛不痒，端然渐渐不明，遂即失明，眼形不移，唯瞳仁里有隐隐青白色，虽不辨人物，犹见三光者，名曰内障。”《外台秘要》则移本病为“脑流青盲眼”，《秘传眼科龙木论》又将本病分为十余种，对其形态的观察十分细致。《证治准绳》始有如银内障之名，其曰：“如银内障证，瞳神中白色如银也。轻则一点白亮，如星似片，重则瞳神皆雪白而圆亮。圆亮者，一名圆翳内障。有仰月、偃月变重为圆者；有一点从中起，视渐昏，而渐渐变大不见者。……年未过六十及过六十而血气未衰者，拨治之皆有复明之理。”可见，如银内障颇类现代所谓老年性白内障，其发病过程颇不一致，可分別先从睛珠的中部、上部、下部、前部、后部、周边部出现白色混浊，然后渐致整个瞳神白而圆亮。白而圆亮者称为圆翳内障，其余则可依其神色形态之不同，分别称作偃月翳、仰月翳、枣花翳、滑翳、涩翳、横翳、散翳、浮翳、沉翳、白翳黄心等（见表6）。名称虽多，其实均为如银内障发病过程中的不同阶段或形态，今故合并讨论。
 
-如银内障初患之吋，眼前多见蝇飞花发，或见薄烟轻雾，此则当与云雾移睛证相鉴别（见“云雾移睛”）。
+如银内障初患之时，眼前多见蝇飞花发，或见薄烟轻雾，此则当与云雾移睛证相鉴别（见“云雾移睛”）。
 
 表6 如银內障分类鉴别表（供参考）
 
