--- a/ok/zjz/zjz03-0.8.0.0.0.md
+++ b/ok/zjz/zjz03-0.8.0.0.0.md
@@ -136,7 +136,7 @@
 
 3.进针：针与头皮呈30度左右夹角，用夹持进针法将针刺 入帽状腱膜下，或者是刺入皮下或肌层，达到该区的长度，然后、 运针。
 
-4.运针：头针的运针只捻转不提插。医者肩、肘、瞬关节、 拇指固定，食指半屈曲状，用拇指第一节的掌侧面与食指第一节 的桡侧面捏住针柄，然后以食指指掌关节不断曲伸，使针体回来快速旋转200次/分左右，每次左右旋转各两转左右。捻转持续约0.5〜1分钟，然后留针5〜10分钟，捻转两次，即可出针。捻转吋或留针时，家属协助患者（或患者自己）活动肢体，加强患肢功能锻炼，有助于提高疗效。一般3〜5分钟刺激后，部分患者在病变部位（患肢或内脏，个别患者在健侧）会出现热、麻、胀、凉、抽动等感应，这样疗效较好。也可用电针代替手捻进行治疗（图255)。
+4.运针：头针的运针只捻转不提插。医者肩、肘、瞬关节、 拇指固定，食指半屈曲状，用拇指第一节的掌侧面与食指第一节 的桡侧面捏住针柄，然后以食指指掌关节不断曲伸，使针体回来快速旋转200次/分左右，每次左右旋转各两转左右。捻转持续约0.5〜1分钟，然后留针5〜10分钟，捻转两次，即可出针。捻转时或留针时，家属协助患者（或患者自己）活动肢体，加强患肢功能锻炼，有助于提高疗效。一般3〜5分钟刺激后，部分患者在病变部位（患肢或内脏，个别患者在健侧）会出现热、麻、胀、凉、抽动等感应，这样疗效较好。也可用电针代替手捻进行治疗（图255)。
 
 ![](img/图255.jpg)
 
