--- a/ok/bc/bc09-0.2.3.0.0.md
+++ b/ok/bc/bc09-0.2.3.0.0.md
@@ -9,6 +9,6 @@
 
 本品辛苦、微温。归心、肾、肺经。有苦泄辛散温通之效，能助心阳，益心气，使肾气上交于心，而有交通心肾之能。并可祛痰湿。痰湿去，心肾交，则神清智慧，而有安神益智之功，且有化痰止咳之效。故凡痰湿内阻之神昏、惊悸、健忘、失眠以及肺寒痰饮咳嗽等证，皆可用之。痈疽疮毒，内服外用也均有效。
 
-【临证应用】 远志用于心神不安、惊悸、失眠、健忘等证，尤以挟痰者多用，常配朱砂、酸枣仁、龙齿等同用，如远志丸； 若与菖蒲、茯苓、人參等同用，如不忘散，治迷惑善忘；对痰阻心窍所致的精神错乱、神志恍惚；惊痫等证多与菖蒲、郁金、白矾等同用。此外，以其利气血，化痰浊，疏通壅滞之功，治痈疽疮毒，属寒凝气滞、痰湿阻络者尤为有效。可单用为末酒调服，或外用敷患处。本品又可用治咳嗽痰多，难以咯出者，常与杏仁、桔梗、甘草等同用。
+【临证应用】 远志用于心神不安、惊悸、失眠、健忘等证，尤以挟痰者多用，常配朱砂、酸枣仁、龙齿等同用，如远志丸； 若与菖蒲、茯苓、人参等同用，如不忘散，治迷惑善忘；对痰阻心窍所致的精神错乱、神志恍惚；惊痫等证多与菖蒲、郁金、白矾等同用。此外，以其利气血，化痰浊，疏通壅滞之功，治痈疽疮毒，属寒凝气滞、痰湿阻络者尤为有效。可单用为末酒调服，或外用敷患处。本品又可用治咳嗽痰多，难以咯出者，常与杏仁、桔梗、甘草等同用。
 
 【用量用法】 3—10克，煎汤或入丸散服。外用适量。现在研究，远志主含远志皂甙。可刺激胃粘膜而反射性地引起轻度恶心，故素有胃炎、溃疡病者应慎用。
