--- a/ok/bc/bc17-0.2.1.0.0.md
+++ b/ok/bc/bc17-0.2.1.0.0.md
@@ -22,7 +22,7 @@
 
 **麋茸**   **麋角**     功用与鹿相仿，而温性差减。
 
-麋茸为鹿科动物麋鹿的未骨化的带有茸毛的幼角，麋角系巳骨化的老角。
+麋茸为鹿科动物麋鹿的未骨化的带有茸毛的幼角，麋角系已骨化的老角。
 
 本品功效与鹿茸和鹿角相同，主治亦无差异。《本草求真》谓麋、鹿虽分有二，然总不外填精补髓，强健筋骨，长养气血而为补肝肾要药也。
 
