--- a/ok/bc/bc17-0.2.1.0.0.md
+++ b/ok/bc/bc17-0.2.1.0.0.md
@@ -8,7 +8,7 @@
 
 本品味甘咸，性温。可峻补肝肾。肾藏精主骨，肝藏血主筋，故为补肝肾、益精血、强筋骨之良药，并能补督脉而固冲任。故凡肾阳不足，精血亏虚以及冲任不固之证，皆可应用，疗效较佳。此外，对阴疽溃久脓清不敛者，亦有温补内托之功。但性温补阳，对阴虚阳亢，血分有热者，均应忌用。
 
-【临证应用】 鹿茸用于肾阳不足，精血亏虚之畏寒肢冷，阳痿滑精，遗尿尿频，腰膝痠痛及官冷不孕等证，可单用研末每次0.6—1 克，淫羊藿煎汤送服；也可配人参、熟地、拘杞子等补气养血益精药同用，以增强疗效，如参茸固本丸。治妇女阴虚血少，冲任不固，崩漏带下，可与阿胶、乌贼骨等同用，如鹿茸散。用于精亏血虚，腰膝痠痛，筋骨无力，精神疲倦或小儿发育不良，骨软行迟，囟门不合等证，多与熟地、山萸肉、山药、五加皮等同用，如加味地黄丸。用于疮疡久溃不敛，阴疽内陷不起等证，可配黄芪、当归等补气益血之品，以内托敛疮。近亦有用治心脏衰弱、心悸怔忡而见肾虚证者。
+【临证应用】 鹿茸用于肾阳不足，精血亏虚之畏寒肢冷，阳痿滑精，遗尿尿频，腰膝痠痛及官冷不孕等证，可单用研末每次0.6—1 克，淫羊藿煎汤送服；也可配人参、熟地、枸杞子等补气养血益精药同用，以增强疗效，如参茸固本丸。治妇女阴虚血少，冲任不固，崩漏带下，可与阿胶、乌贼骨等同用，如鹿茸散。用于精亏血虚，腰膝痠痛，筋骨无力，精神疲倦或小儿发育不良，骨软行迟，囟门不合等证，多与熟地、山萸肉、山药、五加皮等同用，如加味地黄丸。用于疮疡久溃不敛，阴疽内陷不起等证，可配黄芪、当归等补气益血之品，以内托敛疮。近亦有用治心脏衰弱、心悸怔忡而见肾虚证者。
 
 鹿茸温补肾阳虽与附、桂相似，但附、桂辛热刚燥，作用较速，补阳而善祛阴寒；鹿茸甘温柔润，作用较缓，补阳兼能生精。虽三药都能治肾阳不足之证，但附、桂只适用于肾阳衰微而不宜于精髓不足，鹿茸则皆可应用。
 
