--- a/ok/qs/qs03_01.md
+++ b/ok/qs/qs03_01.md
@@ -24,7 +24,7 @@
 
 **或加葛根医项强，或加大黄表里通。**
 
-本方由桂枝、芍药、付草、生姜、大枣等五味药组成。
+本方由桂枝、芍药、甘草、生姜、大枣等五味药组成。
 
 功能解肌发表，调和营卫。主治太阳中风证。太阳，指太阳病，即外感热病的初期阶段，风，指中风。太阳中风的特点是发热、汗出、恶风寒、头痛、脉浮缓。
 
