--- a/ok/bc/bc17-0.2.1.0.0.md
+++ b/ok/bc/bc17-0.2.1.0.0.md
@@ -4,11 +4,11 @@
 
 **鹿角，咸温。生用则散热，行血，消肿**，<small>醋磨，涂肿毒，为末酒服，治所伤。《医余》曰：有臁疮赤肿而痛，用黄连凉药久不愈者，却当用温药，如鹿角灰、发灰、乳香之类，此阴阳寒暑往来之理也。</small>**辟邪，治梦与鬼交**。<small>酒服一撮，鬼精即出，能逐阳中邪气恶血。</small>**炼霜熬膏，则专于滋补**。<small>李时珍曰：鹿乃仙兽，纯阳多寿，能通督脉，又食良草，故其角肉食之，有益无损。鹿一名斑龙，西蜀道士尝贷斑龙丸，歌曰：尾闾不禁沧海竭，九转灵丹都漫说，惟有斑龙顶上珠，能补玉堂门下穴。盖用鹿茸与胶霜也。</small>**造胶霜法：取新角寸截，河水浸七日，刮净，桑火煮七日，入醋少许，取角捣成霜用。其汁加无灰酒熬成膏用，畏大黄**。<small>鹿䘒，鹿相交之精也，设法取之，大补虚劳。</small>
 
-【讲解】   **鹿茸善能补肾阳，益精血，井能强筋健骨**。为鹿科动物梅花鹿或马鹿的尚末骨化而带毛的幼角。夏秋两季雄鹿长出的新角尚末骨化时，将锯下，或用刀砍下，前者称锯茸，后者称为砍茸。商品又分花鹿茸（黄毛茸）和马鹿茸（青毛茸）二种。花鹿茸以粗天，顶端丰满，质嫩，毛细，皮色红棕，油润光亮者为佳。马鹿茸以茸体饱满，体轻，下部无棱绒，断面蜂窝状，组织致密，米黄色者为佳。用时撩去毛，刮净，黄酒浸润，切片，烘干入药，或取干燥鹿茸片，碾成细末用。
+【讲解】   **鹿茸善能补肾阳，益精血，井能强筋健骨**。为鹿科动物梅花鹿或马鹿的尚末骨化而带毛的幼角。夏秋两季雄鹿长出的新角尚末骨化时，将锯下，或用刀砍下，前者称锯茸，后者称为砍茸。商品又分花鹿茸（黄毛茸）和马鹿茸（青毛茸）二种。花鹿茸以粗大，顶端丰满，质嫩，毛细，皮色红棕，油润光亮者为佳。马鹿茸以茸体饱满，体轻，下部无棱绒，断面蜂窝状，组织致密，米黄色者为佳。用时撩去毛，刮净，黄酒浸润，切片，烘干入药，或取干燥鹿茸片，碾成细末用。
 
 本品味甘咸，性温。可峻补肝肾。肾藏精主骨，肝藏血主筋，故为补肝肾、益精血、强筋骨之良药，并能补督脉而固冲任。故凡肾阳不足，精血亏虚以及冲任不固之证，皆可应用，疗效较佳。此外，对阴疽溃久脓清不敛者，亦有温补内托之功。但性温补阳，对阴虚阳亢，血分有热者，均应忌用。
 
-【临证应用】 鹿茸用于肾阳不足，精血亏虚之畏寒肢冷，阳痿滑精，遗尿尿频，腰膝痠痛及官冷不孕等证，可单用研末每次0.6—1 克，淫羊藿煎汤送服；也可配人参、熟地、枸杞子等补气养血益精药同用，以增强疗效，如参茸固本丸。治妇女阴虚血少，冲任不固，崩漏带下，可与阿胶、乌贼骨等同用，如鹿茸散。用于精亏血虚，腰膝痠痛，筋骨无力，精神疲倦或小儿发育不良，骨软行迟，囟门不合等证，多与熟地、山萸肉、山药、五加皮等同用，如加味地黄丸。用于疮疡久溃不敛，阴疽内陷不起等证，可配黄芪、当归等补气益血之品，以内托敛疮。近亦有用治心脏衰弱、心悸怔忡而见肾虚证者。
+【临证应用】 鹿茸用于肾阳不足，精血亏虚之畏寒肢冷，阳痿滑精，遗尿尿频，腰膝痠痛及宫冷不孕等证，可单用研末每次0.6—1 克，淫羊藿煎汤送服；也可配人参、熟地、枸杞子等补气养血益精药同用，以增强疗效，如参茸固本丸。治妇女阴虚血少，冲任不固，崩漏带下，可与阿胶、乌贼骨等同用，如鹿茸散。用于精亏血虚，腰膝痠痛，筋骨无力，精神疲倦或小儿发育不良，骨软行迟，囟门不合等证，多与熟地、山萸肉、山药、五加皮等同用，如加味地黄丸。用于疮疡久溃不敛，阴疽内陷不起等证，可配黄芪、当归等补气益血之品，以内托敛疮。近亦有用治心脏衰弱、心悸怔忡而见肾虚证者。
 
 鹿茸温补肾阳虽与附、桂相似，但附、桂辛热刚燥，作用较速，补阳而善祛阴寒；鹿茸甘温柔润，作用较缓，补阳兼能生精。虽三药都能治肾阳不足之证，但附、桂只适用于肾阳衰微而不宜于精髓不足，鹿茸则皆可应用。
 
