--- a/ok/bc/bc09-0.2.1.0.0.md
+++ b/ok/bc/bc09-0.2.1.0.0.md
@@ -6,7 +6,7 @@
 
 **酸枣仁具有养心阴、益肝血、而有宁心安神之功，为滋养性安神药**。为鼠李科落叶灌木或乔木酸枣的成熟种子。生用或炒用、入汤剂应捣碎。
 
-本品甘酸性平。入心、肝、胆经。既能补营血以安神，又能敛营阴以止汗。故为养心阴、益肝血、安神敛汗之良药，凡阴血不足，心肝失养，虚火妄动，阴液外泄所致的虚烦失眠、心悸怔忡、自汗盗汗、心烦口渴等证，均为常用。至于《备要》载“生用酸平，疗胆势好眠”，据临床实践，不论生用或炒熟用，都有良好的镇静安神作用。还记载本品为坚筋药，可治痹痛和久泻等，现不见用。
+本品甘酸性平。入心、肝、胆经。既能补营血以安神，又能敛营阴以止汗。故为养心阴、益肝血、安神敛汗之良药，凡阴血不足，心肝失养，虚火妄动，阴液外泄所致的虚烦失眠、心悸怔忡、自汗盗汗、心烦口渴等证，均为常用。至于《备要》载“生用酸平，疗胆热好眠”，据临床实践，不论生用或炒熟用，都有良好的镇静安神作用。还记载本品为坚筋药，可治痹痛和久泻等，现不见用。
 
 【临证应用】酸枣仁为安神之要药，可随配伍应用于多种失眠之证。如心肝血虚引起的失眠多梦、惊悸怔忡，常与当归、白芍、夜交藤等同用。若肝胆血虚而有热之虚烦失眠，心悸汗多者，可配知母、茯苓、川芎等同用，以养血安神，清热除烦，如酸枣仁汤；若肝肾不足，阴虚阳亢之烦躁失眠、梦遗，咽燥便干，或兼虚热盗汗者，配生地、麦冬、丹参、柏子仁等滋养心肾药同用，如天王补心丹；若失眠健忘、多梦易醒、饮食减少、疲倦无力等，属于心脾气虚者，亦可与黄芪、人参、白术、龙眼肉等同用，如归脾汤。治体虚自汗、盗汗者，常与黄芪、五味子、山茱萸等同用。但失眠系由湿痰邪热所致者。当以化痰清热为主，本品不宜应用。
 
