--- a/ok/bc/bc16.md
+++ b/ok/bc/bc16.md
@@ -12,7 +12,7 @@
 
 2.熟悉化痰止咳平喘药与解表、清热、温里、补气、散寒、宣 肺等药配伍应用的理论依据（联系中医基本理论)。
 
-3.掌握温化寒痰葯中常用药 的功效、临证应用，并比较其异同。
+3.掌握温化寒痰药中常用药的功效、临证应用，并比较其异同。
 
 4.掌握清化热痰药中常用药的功效、临证应用，并比较其异同。
 
