--- a/ok/bc/bc00.1-0.2.1.0.0.md
+++ b/ok/bc/bc00.1-0.2.1.0.0.md
@@ -22,7 +22,7 @@
 
 五味中又有阴有阳，《素问·至真要大论》曰：辛甘发散为阳，酸苦涌泄为阴，咸味涌泄为阴，淡味渗泄为阳。可见五味之中，辛、甘、淡属阳，酸、苦、咸属阴。
 
-气与味是药物性能的主要两个方面。它们之间有着不可分割的密切关系，每一种药物都具有性和味，因而两者必须综合起来看·才能比較全面地掌握药性。一般说，气味相同的药物，其主要作用大致相同，如辛温药大都具有发表散寒的用，苦寒药大都具有清热泻火的作用，而气味不同的药物，作用也就不同。同一种药性各有五味的差别，而同一种药味，又有四性的不同，同是温性药，若味不同，作用大有差异，如麻黄辛温，发汗散风寒；黄芪甘温，补中益气。又同是辛味药，若气不同，作用也不一样，有薄荷辛凉发散风热，附子辛热以祛阴寒等。还有一些药物，一性而兼有二种以上的味，而其作用范围相应的扩大，如当归味辛甘，性温。甘能补、辛能行，既能补血又能活血，常用于血虚、血寒瘀滞之证。因此，在辨认药性时，不能把性和味孤立起来看。掌握四气五味，是研究和运用药物的重要关键，指导用药的基础。药物之所以治病，就因为药物有各自的偏性，唐容川说：设人身之气，偏胜偏衰则生疾病，又借药物一气之偏，以调吾身之盛衰而使归于和平则无病矣。又如《内经》云：风淫于内，治以辛凉，佐以苦甘，以甘缓之，以辛散之。正是针对人体的病变，利用葯物不同的性能，以调整人体内部机能的偏胜偏衰，使达到生理的平衡为目的。
+气与味是药物性能的主要两个方面。它们之间有着不可分割的密切关系，每一种药物都具有性和味，因而两者必须综合起来看·才能比較全面地掌握药性。一般说，气味相同的药物，其主要作用大致相同，如辛温药大都具有发表散寒的用，苦寒药大都具有清热泻火的作用，而气味不同的药物，作用也就不同。同一种药性各有五味的差别，而同一种药味，又有四性的不同，同是温性药，若味不同，作用大有差异，如麻黄辛温，发汗散风寒；黄芪甘温，补中益气。又同是辛味药，若气不同，作用也不一样，有薄荷辛凉发散风热，附子辛热以祛阴寒等。还有一些药物，一性而兼有二种以上的味，而其作用范围相应的扩大，如当归味辛甘，性温。甘能补、辛能行，既能补血又能活血，常用于血虚、血寒瘀滞之证。因此，在辨认药性时，不能把性和味孤立起来看。掌握四气五味，是研究和运用药物的重要关键，指导用药的基础。药物之所以治病，就因为药物有各自的偏性，唐容川说：设人身之气，偏胜偏衰则生疾病，又借药物一气之偏，以调吾身之盛衰而使归于和平则无病矣。又如《内经》云：风淫于内，治以辛凉，佐以苦甘，以甘缓之，以辛散之。正是针对人体的病变，利用药物不同的性能，以调整人体内部机能的偏胜偏衰，使达到生理的平衡为目的。
 
 （三）升降浮沉：各种疾病，在病机和证候方面，表现出有向上（如呕吐、气喘）、向下（如渴利、脱肛）、向外（如发热、自汗）、向内（表证不解、疹毒内陷）等病势趋向，在治疗时须针对病情选用相应的能改善或消除这些病证的药物。所以中药的作用同疾病表现的趋向相对来说，也有升、降、浮、沉的性质；升是上升，降是下降，浮是发散，沉是泻利。凡升浮的药，都属阳，主上行向外，有升阳、发表、散寒、开窍等作用，沉降的药，都属阴，主下行向内，有降逆清热利水、收敛等作用。升和降，浮和沉都是相对的。
 
