--- a/ok/bc/bc03-0.4.1.0.0.md
+++ b/ok/bc/bc03-0.4.1.0.0.md
@@ -1,6 +1,6 @@
 ### 金银花
 
-**〔原文〕甘寒入肺。散热解毒**，清热即是解毒。**补虚**凡物甘者皆补。**疗风**，**养血止渴**。丹溪曰：痈疽安后发渴，黄芪六一汤吞忍冬丸切当。忍冬养血，黄芪补气，渴何由作。 **治痈疽疥癬，杨梅恶疮**（1），**肠澼血痢，五种尸疰**（2）。**经冬不凋，一名忍冬**。又名左缠藤。**花叶同功，花香尤佳**，**酿酒代茶，熬膏并妙** 。忍冬酒，治痈疽发背一切恶毒，初起便服奇效。干者亦可，惟不及生者力速。忍冬五两，甘草二两，水二碗，煎至一碗，再入酒一碗略煎，分三服，一日一夜吃尽。重者日二剂，服至大小肠通利，则药力到。忍冬丸，照前分两，酒煮晒干，同甘草为末，以所煮余酒打糊为丸。陈藏器曰：热毒血痢，浓煎服之。为末，糖调赏服，能稀痘。   
+**〔原文〕甘寒入肺。散热解毒**，<small>清热即是解毒。</small>**补虚**<small>凡物甘者皆补。</small>**疗风**，**养血止渴**。<small>丹溪曰：痈疽安后发渴，黄芪六一汤吞忍冬丸切当。忍冬养血，黄芪补气，渴何由作。</small> **治痈疽疥癬，杨梅恶疮**（1），**肠澼血痢，五种尸疰**（2）。**经冬不凋，一名忍冬**。<small>又名左缠藤。</small>**花叶同功，花香尤佳**，**酿酒代茶，熬膏并妙** 。<small>忍冬酒，治痈疽发背一切恶毒，初起便服奇效。干者亦可，惟不及生者力速。忍冬五两，甘草二两，水二碗，煎至一碗，再入酒一碗略煎，分三服，一日一夜吃尽。重者日二剂，服至大小肠通利，则药力到。忍冬丸，照前分两，酒煮晒干，同甘草为末，以所煮余酒打糊为丸。陈藏器曰：热毒血痢，浓煎服之。为末，糖调常服，能稀痘。   </small>
 
 【讲解】（1）杨梅恶疮：由梅毒引起的各种皮肤病变。因疮形似杨梅，故名。（2）尸疰：即劳瘵。与现代医学之结核病相似。
 
@@ -22,4 +22,4 @@
 
 【用量用法】10~30克，煎服。外用适量。凡热毒疮痈，用量宜重；温病发热，用量宜轻，且宜生用；治血痢便血，则须炒炭用。
 
-附：**忍冬藤**        为忍冬的茎叶，又名银花藤。性味功效与金银花相似，解毒作用虽不及银花，但有通经活络的作用，可消除经络之风湿热邪而止疼痛，故可用于风湿热痹，关节红肿疼痛，屈仲不利之证。
+附：**忍冬藤**        为忍冬的茎叶，又名银花藤。性味功效与金银花相似，解毒作用虽不及银花，但有通经活络的作用，可消除经络之风湿热邪而止疼痛，故可用于风湿热痹，关节红肿疼痛，屈伸不利之证。
