--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -198,7 +198,7 @@
 >
 > 《素问-移精变气篇》
 
-由此可见，积精全神才是健康长寿的根本。
+青少年的时候，精、神充足，需要医药的情况相对少；中老年，精、神衰弱，需要更多医药来辅助补充调节；到晚年，精神衰竭，单凭医药就无能为力了。由此可见，积精全神才是健康长寿的根本。
 
 > 养生方法虽然以保养精气神为核心，但是以节欲保精为第一要义。因为精气神是不分割的统一体，存则俱存，亡则俱亡。精能化气，气能生神，精、气、神存在着相互依存、相互转化的关系，而精是神气的本源，所以《内经》有“积精全神”之说。
 >
