--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -2,7 +2,7 @@
 
 ## 1、部位划分
 
-关于部位的划分，在前面的章节中已经部分提及，但因这个内容比较重要，这里在做一个总结梳理，使大家能有更清晰度印象。
+关于部位的划分，在前面的章节中已经部分提及，但因这个内容比较重要，这里在做一个总结梳理，使大家能有更清晰的印象。
 
 从不同的角度看，人体的部位有很多种分法。就像一个国家的划分可以根据不同的标准，比如按照省来划分，或者按照方位划分，按照边境与内地的标准划分，按照城市等级划分等等。人体的部位划分主要有以下几种：
 
