--- a/ok/bc/bc06-0.0.7.0.0.md
+++ b/ok/bc/bc06-0.0.7.0.0.md
@@ -1,6 +1,6 @@
 ### **桑寄生**
 
-[原文] **苦坚肾，助筋骨而固齿长髪；**齿者骨之余，髪者血之余。**甘益血，止崩漏而下乳安胎。**三证皆由血虚。外**科散疮疡，追风湿。他树多寄生，以桑上采者为真，杂树恐反有害。茎叶并用。忌火。**
+[原文] **苦坚肾，助筋骨而固齿长髪；**齿者骨之余，髪者血之余。**甘益血，止崩漏而下乳安胎。**三证皆由血虚。**外科散疮疡，追风湿。他树多寄生，以桑上采者为真，杂树恐反有害。茎叶并用。忌火。**
 
 【讲解】**桑寄生既能除风湿，又能补肝肾，强筋骨，并能安胎。**为桑寄生科常绿小灌木槲寄生或桑寄生的带叶茎枝。切段生用。桑寄生又名广寄生，主产于广东、广西等地。药材槲寄生又名北寄生，主产于河北、辽宁、吉林、内蒙古等地。
 
